--- a/ok/qs/qs01_04.md
+++ b/ok/qs/qs01_04.md
@@ -34,7 +34,7 @@
 
 **额颊耳前，寸口岐锐，下足三阴，肝肾脾胃。**
 
-**竟** 从头到尾。**岐**qi，读奇，歧骨，大指次指交叉处骨。 **锐**  锐骨，桡骨茎突。 **上** 寸部。**下** 尺部。
+**竟** 从头到尾。**岐**qí，读奇，歧骨，大指次指交叉处骨。 **锐**  锐骨，桡骨茎突。 **上** 寸部。**下** 尺部。
 
 诊脉的方法有七种，用手在皮肤上轻按的叫“浮”，比浮略重按一些的叫“中”，用手重按的叫“沉”，从寸部向前推移叫“上”，从尺部向后推移叫“下”，从左往右推叫“右”，从右往左推叫“左”，亦称内推外推。浮、中、沉、上竟、下竟、左右推等七诊，是讲推寻取脉的方法。男子以左手的脉大有力为好，女子以右手的脉大有力为适宜。并认为男子两尺部脉经常表现为虚的多，而女子的尺部脉经常表现为坚实（所谓男左女右）。
 
@@ -70,7 +70,7 @@
 
 **五至无疴，闰以太息。**
 
-**平旦** 寅时，清晨。**疴**ke，读科，病。 **闰** run读润。
+**平旦** 寅时，清晨。**疴**kē，读科，病。 **闰** rùn，读润。
 
 诊脉常以清晨比较适宜，因为清晨人的阴阳气血处于相对平衡状态，故容易发现有病的脉象。诊脉时要宁静心神，摒弃杂念，调匀呼吸（调息），仔细地审察。一息脉来四次为气血和平，脉来五次也是没有病的正常脉，因为在呼吸之间，有一延长呼吸（即深呼吸），一呼脉二动，一吸脉二动，太息之时脉一动，故一息脉五动是正常的脉象（闰以太息：闰，张景岳认为是“余”的意思，好象闰年闰月一样，太息指比较长的呼吸，也就是深呼吸）。
 
@@ -102,7 +102,7 @@
 
 **惟中无力，其名曰芤，推筋著骨，伏脉可求。**
 
-**濡**ruǎn，读软。 **芤**kou，读抠。
+**濡**ruǎn，读软。 **芤**kōu，读抠。
 
 说明了浮、中、沉三种脉候所出现的部位。从浮沉两脉的有力无力辨别濡、弱、牢、革四种脉象；从三部的有力辨别虚实的脉形；从三部的有力无力与按之感觉的大小等来判别微、散脉的脉形。只有浮、沉二部有力、中部无力的才是芤脉，推筋着骨才能摸到的是伏脉。
 
@@ -154,7 +154,7 @@
 
 **虚主诸虚，实主诸实。芤主失血，随见可知。**
 
-**癥瘕** zhengjia，读真假，腹内积块。
+**癥瘕** zhēng jiǎ，读真假，腹内积块。
 
 濡脉多为阳气虚，弱脉多阴血亏，微脉主一切虚证。比较严重的虚证多见浮散无根的欲脉。革脉多主亡血失精，或妇人流产、带下、崩漏等疾患。牢脉主疝气、腹部积块（癥瘕：坚硬不移叫癥，时聚时散叫瘕）以及心腹部寒气作痛。虚脉主所有的虚证，实脉主所有的实证，芤脉多见于失血。
 
@@ -192,7 +192,7 @@
 
 **阳证见阴，命必危殆，阴证见阳，虽困无害。**
 
-**殆**qai，读待，危险。
+**殆**dài，读待，危险。
 
 每一种脉象，都主一定的病证，但其中有相宜与不相宜、阴阳属顺属逆的不同，从这些相宜相忌及逆顺中，可以推测疾病的吉凶，判断预后。所谓阴阳顺逆，就是指病有属阴属阳，脉也有阴脉阳脉，如属阳的病症见阳脉，这是相顺，如果阳性疾患见阴脉，这是相逆。所以张介宾说：凡内伤虚弱不足的病，忌见浮、洪、紧、数等阳脉，外感邪实有余的病，忌见细弱等阴脉。如中风之脉以浮迟为顺（因为中风多由外风猝然入中，或真阴亏虚，风从内生），若见坚大急疾为逆。伤寒等外感热病，脉以浮洪为顺，若见沉微涩小，说明脉证相反为逆。伤寒发汗以后身凉脉静为顺，如果汗后脉躁而身热不减为逆。阳热的病证反见阴脉，这就有生命危险了，伤寒的阴寒之证反而见阳脉，这是阳气来复，病变由里出表，由阴变阳的好现象，说明病证将要向好的方面转化，这种情况也为顺。所以《伤寒论》说：“阳病见阴脉者死，阴病见阳脉者生。”
 
@@ -210,7 +210,7 @@
 
 因劳倦损伤脾土，脉象应当虚弱，反而自汗出脉躁不宁，为脉证相逆。疟疾病的脉象为弦，弦而迟多为寒证，弦而数多为热证，若疟疾见代散二脉，多为邪盛正衰，为难治。泻下多里虚。脉见沉、小、滑、弱为顺，反见沉、大、实、数而又身热为逆。呕吐反胃脉以浮滑为顺，反见沉、数、细、涩为气少津衰，同时伴有大便秘结者为逆。霍乱病见到代脉也不必惊讶，可能是一时清浊混乱所致的脉不接续，如果反见脉伏而不出，并见舌头卷缩、阴囊也收缩，四肢厥冷，此为阴寒极盛之证。
 
-**16.嗽脉多浮，浮濡易治，沉伏而紧，死期将至。**
+**19.嗽脉多浮，浮濡易治，沉伏而紧，死期将至。**
 
 **喘息抬肩，浮滑是顺，沉涩肢寒，切为逆证。**
 
@@ -264,7 +264,7 @@
 
 **肠痈实烈，滑数相宜，沉细无根，其死已期。**
 
-**肺痈**   肺部发生痈疡、咳唾脓血的病症。   **肺痿**   阴虚肺伤的慢性衰弱性疾患。   **肠痈**    湿热留注肠中，气滯血淤，发为痈疡所致的疾患。   **痈疽**   yong   ju，读拥居，肿疡   表现为红肿高起，焮热疼痛，周围界限清楚，在未成脓之前无疮头而易消散，已成脓易溃破，溃后脓液稠粘，疮口易收敛的为痈；凡疮疡表现为漫肿平塌，皮色不变，不热少痛，未成脓难消，已成脓难溃，脓水清稀，破后难敛的为疸。
+**肺痈**   肺部发生痈疡、咳唾脓血的病症。   **肺痿**   阴虚肺伤的慢性衰弱性疾患。   **肠痈**    湿热留注肠中，气滯血淤，发为痈疡所致的疾患。   **痈疽**   yōng jū，读拥居，肿疡   表现为红肿高起，焮热疼痛，周围界限清楚，在未成脓之前无疮头而易消散，已成脓易溃破，溃后脓液稠粘，疮口易收敛的为痈；凡疮疡表现为漫肿平塌，皮色不变，不热少痛，未成脓难消，已成脓难溃，脓水清稀，破后难敛的为疸。
 
 痈疽未溃破时见到脉洪大为顺，等到溃破了以后脉还见洪大为逆。寸脉侯肺，肺痈病人的寸脉以数而实为顺，肺瘘是阴虚肺伤，所以脉应以数而无力为顺。痈疽部位的皮肤颜色稍白时，为气血凝滞所致，脉象以短涩为顺，如果脉见数大而重按无力，则多为气血虚损。肠痈为实热所致，脉以滑数为顺，如果出现了沉细无根的败脉，则为邪盛正虚，难以治愈，多为逆证。
 
@@ -274,7 +274,7 @@
 
 **左男右女，孕乳是主，女腹如箕，男腹如釜。**
 
-**箕** ji 读其，簸其。**釜**  fu，读斧，古代的烹饪用具，即无脚的锅。
+**箕** jī 读其，簸其。**釜**  fǔ，读斧，古代的烹饪用具，即无脚的锅。
 
 妇女怀孕以后，属阴的尺部脉搏动明显，与属阳的寸部脉有区别。《素问•阴阳别论》说：“阴搏阳别，谓之有子”。手少阴心经为左手寸部脉所候，所以左寸部脉动甚时，为血聚以养胎的反映，说明已经怀孕。寸部脉滑疾而散为怀孕三个月，滑疾而不散，为怀孕巳经五个月。这种脉象出现在左寸部时为男胎，出现在右寸部则为女胎。怀孕以后乳房的变化也是主要的。如果怀的是女胎，则孕妇的腹部外形象簸箕一样成圆形；如果怀的是男胎，腹部外形多象覆着的锅子一样，上面小下面大。这种说法，没有多大的参考价值。因为怀孕是男是女，不可能影响母体腹部外形。
 
@@ -294,7 +294,7 @@
 
 **命脉将绝，虾游鱼翔，至如涌泉，绝在膀胱。**
 
-啄 zhuo，读酌，鸟用嘴取食物。 **翔**   xiang读详、盘旋地飞。  **省客**  张景岳说“如省问之客，或去或来也。”指
+啄 zhuó，读酌，鸟用嘴取食物。 **翔**   xiáng，读详、盘旋地飞。  **省客**  张景岳说“如省问之客，或去或来也。”指
 
 脉初充塞于指端，随即鼓动而去。
 
@@ -308,7 +308,7 @@
 
 **掌中腹中，鱼青胃寒。寒热所在，病生热寒。**
 
-**肘** zhou，读 帚，上臂和前臂相接处向外面突起的地方。
+**肘** zhǒu，读 帚，上臂和前臂相接处向外面突起的地方。
 
 **鱼**  鱼际。**尺**  前臂内侧自肘至腕。
 
@@ -394,7 +394,7 @@
 
 **主病诗:**
 
-**浮脉为阳表病居，迟风数热紧寒拘;**
+**浮脉为阳表病居，迟风数热紧寒拘，**
 
 **浮而有力多风热，无力而浮是血虚。**
 
@@ -402,7 +402,7 @@
 
 **关上土衰兼木旺，尺中溲便不流通。**
 
-**惟** wei，读为。只，仅。         榆荚   yu jia，读余夹，榆树的果实，形状圆而小。 **豁**   huo，读或，开阔。
+**惟** wéi，读为。只，仅。         榆荚   yú jiá，读余夹，榆树的果实，形状圆而小。 **豁**   huō，读或，开阔。
 
 体状即脉体的形状。浮脉只是显现在肉上的皮部行走，诊脉时好象手指轻轻地摸到了榆荚，又好象羽毛沾肤一样的轻柔，如果是秋天当令的时候见到此脉，知道是无病的象征，病久了见到它就应该引起警惕。
 
@@ -436,7 +436,7 @@
 
 **尺部浊遗并泻痢，肾虚腰及下元痌**。
 
-兮 xi，读希，助词。痌 tong，读通，疾病。
+兮 xī，读希，助词。痌 tōng，读通，疾病。
 
 水的本性总是湿润而向下行，沉脉也是这样，总是出现在筋骨之间，搏动软滑均匀，女子的寸部或者男子的尺部四时都是如此的脉象为平脉，也就是平和的正常脉。
 
@@ -468,7 +468,7 @@
 
 **尺是肾虚腰脚重，溲便不禁疝牵丸。**
 
-**痼** gu，读顾，痼疾，经久难治疗的病。
+**痼** gù，读顾，痼疾，经久难治疗的病。
 
 迟脉在一息之间搏动只有三次，主阳气衰微而敌不过阴寒邪气的气血虚寒证。但迟脉又有浮沉的不同，迟而浮者主表寒，迟而沉者为里寒。要消除这种阴寒盛的疾患，还必须用扶阳益火之法温补肾阳（唐•王冰对《内经》“诸热之而寒者取之阳”的注语云:“益火之原，以消阴翳”。后人称之为“益火消阴”）。
 
@@ -526,7 +526,7 @@
 
 **当关宿食肝脾热，渴痢癫淋看尺部。**
 
-**替替**  形容持续不断。**却**   后退。㿗tui，读颓，1.睾丸肿大坚硬，重坠胀痛或麻木不知痛痒；2.妇女少腹肿
+**替替**  形容持续不断。**却**   后退。㿗tuí，读颓，1.睾丸肿大坚硬，重坠胀痛或麻木不知痛痒；2.妇女少腹肿
 
 的病变。
 
@@ -584,9 +584,9 @@
 
 **骨蒸痿痹伤精血，却在神门两部居。**
 
-**慈葱**  食用葱的一种。**悸** ji ,读记，心悸。
+**慈葱**  食用葱的一种。**悸** jì ,读记，心悸。
 
-**蹉跎**  cuotuo，读 搓拖，光阴过去，事情没有进展。
+**蹉跎**  cuō tuó，读 搓拖，光阴过去，事情没有进展。
 
 **骨蒸**  形容阴虚潮热的热气自里透发而出。 **神门**  王树和《脉经》指尺部脉的别称。
 
@@ -618,7 +618,7 @@
 
 **当关怀热中宫满，尺实腰肠痛不通。**
 
-**幅幅** bi〜，读壁，坚实貌。
+**幅幅** bì~，读壁，坚实貌。
 
 实脉不论轻取还是重按沉取均见形大而长，应指绝无虚象，而是坚实强劲有力，为邪热蕴结、充斥三焦的实火，治疗上可苦寒泻下通肠腑以治内，辛凉发汗解表热以治外，表里双解，即可康复。
 
@@ -660,7 +660,7 @@
 
 **浮为血涩沉为痞，寸主头痛尺腹痛**
 
-**痞**  pi ,读匹，胸腹间气机阻塞不舒的一种自觉症状。
+**痞**  pǐ ,读匹，胸腹间气机阻塞不舒的一种自觉症状。
 
 短脉的脉形是寸部和尺部短而不满位，涩脉虽然显得短，但搏动迟缓，脉形细弱，运行艰难。短涩而浮之脉，在秋天见到则为顺，在春三月见到则为逆，必为邪气干犯。
 
@@ -696,7 +696,7 @@
 
 洪脉为阳气亢盛之脉，阴血多虚，如火热炎盛多为心火亢盛，关脉洪时为脘腹胀满、翻胃呕逆，必须及早治疗，尺部脉洪为阴津亏耗，见泄泻下痢。左寸部脉洪为心火亢盛，右寸部脉洪为肺金被刑，肝火为左关洪，胃火见右关洪，肾阴亏虚，相火妄动为尺部脉洪。
 
-按：“阴虚泄痢可愁知”一句，原文为“阴虚泄痢可踌躇”(chou chu,读仇除，犹豫不定之意)，可能为原编者所改。
+按：“阴虚泄痢可愁知”一句，原文为“阴虚泄痢可踌躇”(chóu chú,读仇除，犹豫不定之意)，可能为原编者所改。
 
 **【缓脉】**
 
@@ -716,7 +716,7 @@
 
 **尺部见之精血弱，恶寒消瘅痛呻吟。**
 
-**撇撇** pi〜，读璧，波浪貌。**消瘅**dan，读胆，消渴病。**崩中**  不在行经期，阴道内大量出血，或持续出血、淋漓不断。
+**撇撇** pi〜，读璧，波浪貌。**消瘅**dǎn，读胆，消渴病。**崩中**  不在行经期，阴道内大量出血，或持续出血、淋漓不断。
 
 微脉应指极轻极微，有于柔和的微波，按之欲绝，似有似无。微脉为阳气衰弱，细脉则主阴血亏虚，较之微脉的似有似无要显而易见且稍粗一点。
 
@@ -766,9 +766,9 @@
 
 **神门濡泄或风秘，或是蹒跚足力迂。**
 
-**阿阿**     形容舒缓。**袅袅**     niao，读鸟，形容细长柔软的东西随风摆动。**飐**    zhan，读展，风吹颤动。
+**阿阿**     形容舒缓。**袅袅**     niǎo，读鸟，形容细长柔软的东西随风摆动。**飐**    zhǎn，读展，风吹颤动。
 
-**蹒跚**panshan，读盘衫，因为腿脚不灵便，走路缓慢、摇摆的样子。**迂** yu，读於，迂缓，行动迟缓。  **濡泄** 泻下如水，清浊不分。**风秘**  风热内盛、津液燥涩而致的大便秘结，或中风病人肠胃积热而便秘。
+**蹒跚**pán shān，读盘衫，因为腿脚不灵便，走路缓慢、摇摆的样子。**迂** yū，读於，迂缓，行动迟缓。  **濡泄** 泻下如水，清浊不分。**风秘**  风热内盛、津液燥涩而致的大便秘结，或中风病人肠胃积热而便秘。
 
 缓脉的形象是舒缓均匀，一息脉动四次，如象微风吹拂柳梢轻盈柔软。若要知道脉象是否有神气，可在脉象的从容和缓中看出来。
 
@@ -828,9 +828,9 @@
 
 **关右胃寒心腹痛，尺中阴疝脚拘挛。**
 
-翳 yi，读意，遮蒙。**瞳子**  瞳孔。
+翳 yì，读意，遮蒙。**瞳子**  瞳孔。
 
-**迢迢**  tiao，读条，形容路途遥远。
+**迢迢**  tiáo，读条，形容路途遥远。
 
 弦脉的脉象挺直而长，主肝木之火旺盛、克伐脾土、肝旺脾虚之证。肝火亢盛则性情急躁，容易发怒，胸胁胀满，有好象要大叫一声才能舒服一些的感觉。肝阳上犯瞳孔，翳蒙模糊不清，迎风流泪不止。
 
@@ -928,7 +928,7 @@
 
 ​               **右关软散胻胕肿，散居两尺魂应断。**
 
-**胻胕**hangfu，读杭肤，**胻**，足胫；胕：足背。**溢饮**水炊病的一种，无汗，水饮流溢于四肢，身体疼重，四肢
+**胻胕**héngfú，读杭肤，**胻**，足胫；胕：足背。**溢饮**水炊病的一种，无汗，水饮流溢于四肢，身体疼重，四肢
 
 浮肿。
 
@@ -976,7 +976,7 @@
 
 ​               **当关腹痛困沉沉，关后疝疼还破腹。**
 
-**兀兀**wu〜，读误，高高地突起。**破腹**形容腹痛剧烈。**裁**分开之意。
+**兀兀**wù〜，读误，高高地突起。**破腹**形容腹痛剧烈。**裁**分开之意。
 
 伏脉须要用力重按，推动筋肉按到骨胳上才能摸到，手指要用力分裁开筋脉后，在深部隐隐约约可感觉到脉的搏动。伏脉可见于外感寒邪后凝滞经络，邪蔽阳郁之证，须要通过发汗治疗，使阳气能随汗出而发越出来后，才能解决。还可见到四肢厥逆、脐腹冷痛的阴寒证。
 
@@ -1012,7 +1012,7 @@
 
 **【结脉】**
 
-**体状诗：结脉缓而时一止，独阴偏胜欲亡阳，**
+**体状诗：结脉缓而时一止，独阴偏胜欲亡阳。**
 
 ​               **浮为气滞沉为积，汗下分明在主张。**
 
@@ -1020,7 +1020,7 @@
 
 **主病诗：结脉皆因气血凝，老痰结滞苦呻吟，**
 
-​               **内生积聚外痈肿，   疝瘕为殃病属阴。**
+​               **内生积聚外痈肿，疝瘕为殃病属阴。**
 
 结脉搏动迟缓而且毫无规律地歇止，为阴寒偏胜而阳气欲亡的脉象。结而浮者为寒邪凝滞于经脉、结而沉者为积聚，前者须用发汗的方法治疗，后者要用攻下积聚的办法治疗，二者在治疗方法上是分明的。
 
