--- a/ok/yk/yk0zl06-0.5.6.0.0.md
+++ b/ok/yk/yk0zl06-0.5.6.0.0.md
@@ -14,7 +14,7 @@
 
 红肿多见于外障眼病，其性质和程度轻重的差异，在辨证上的意义各不相同。
 
-1.胞睑：胞睑微红微肿微痒，多为风邪初犯；眼睑红赤明显且有肿痛，多为脾胃蕴热；若红肿似桃且有灼痛，系热毒炽盛；若皮肤红赤糜烂，如涂朱色，多湿热蕴蒸；若兼有鳞屑如糠皮样，或起水泡，为湿热内蕴，复受风邪；若胞脸漫肿而色紫暗，多为气滞血瘀；肿胀虚浮，皮色光亮，不痛不痒者，多为脾虚湿阻，或脾肾阳虚，水气上泛。
+1.胞睑：胞睑微红微肿微痒，多为风邪初犯；眼睑红赤明显且有肿痛，多为脾胃蕴热；若红肿似桃且有灼痛，系热毒炽盛；若皮肤红赤糜烂，如涂朱色，多湿热蕴蒸；若兼有鳞屑如糠皮样，或起水泡，为湿热内蕴，复受风邪；若胞睑漫肿而色紫暗，多为气滞血瘀；肿胀虚浮，皮色光亮，不痛不痒者，多为脾虚湿阻，或脾肾阳虚，水气上泛。
 
 2.白睛：若白睛暴赤，且兼痒感及多眵，系肺经风热；白睛红赤明显，色呈鲜红，多因肺经实火；白睛不赤而浮肿，状如鱼膘，为肺气不利：白晴血丝淡红，久久不消，兼见目涩或微痒，多为肺阴不足，津不上荣；血丝淡红迂曲，多为肺气不足，血行不必若抱轮红赤，多为肝肺实火或木火乘金；若抱轮红赤不甚，目痛较轻者，多为阴虚火旺；若见白睛混赤，多为火热炽盛，气血瘀滞（见图8）。
 
