--- a/ok/yk/yk1gl02-0.3.2.0.0.md
+++ b/ok/yk/yk1gl02-0.3.2.0.0.md
@@ -1,6 +1,6 @@
 ### 〔漏睛证〕
 
-本证是以脓液或粘浊泪水时时自眦角流岀为主要特征的眼病。本病名见于《太平圣惠方》，但《诸病源候论》所载的“目脓漏侯”，当为本病的最早记载。之后，《秘传眼科龙木论》称为漏睛脓出，《目经大成》称睛漏，《证治准绳》中所载的“漏睛”泛指眼，的各个部位发生的漏证，包括大眦漏、小眦漏、阴漏证、阳漏证、正漏证、偏漏证、外漏证和窍漏证等，与前述漏睛的含义不尽相同。其中外漏、偏漏、正漏证分别是发生在胞脸、白睛和黑睛上病变，不属本节讨论之范围。大眦漏和小眦漏乃是以病位而分；窍漏实指脓液自泪窍流出的病证，故当为大眦漏的类型之一，临床最为常见（图23）。其它类型的大眦漏和小眦漏临床极为少见。阳漏和阴漏是以白昼和夜晚症情轻重的不同而划分，日间胀痛流水，其色黄赤、夜间稍轻者为阳漏证；从黄昏至天晓则胀痛流水，呈青黑色或腥秽不可闻，日间稍轻者为阴漏证。
+本证是以脓液或粘浊泪水时时自眦角流岀为主要特征的眼病。本病名见于《太平圣惠方》，但《诸病源候论》所载的“目脓漏侯”，当为本病的最早记载。之后，《秘传眼科龙木论》称为漏睛脓出，《目经大成》称睛漏，《证治准绳》中所载的“漏睛”泛指眼，的各个部位发生的漏证，包括大眦漏、小眦漏、阴漏证、阳漏证、正漏证、偏漏证、外漏证和窍漏证等，与前述漏睛的含义不尽相同。其中外漏、偏漏、正漏证分别是发生在胞睑、白睛和黑睛上病变，不属本节讨论之范围。大眦漏和小眦漏乃是以病位而分；窍漏实指脓液自泪窍流出的病证，故当为大眦漏的类型之一，临床最为常见（图23）。其它类型的大眦漏和小眦漏临床极为少见。阳漏和阴漏是以白昼和夜晚症情轻重的不同而划分，日间胀痛流水，其色黄赤、夜间稍轻者为阳漏证；从黄昏至天晓则胀痛流水，呈青黑色或腥秽不可闻，日间稍轻者为阴漏证。
 
 <img src="img\23.jpg" style="zoom:50%;" />
 
