--- a/ok/yk/yk0zl07-0.2.1.0.0.md
+++ b/ok/yk/yk0zl07-0.2.1.0.0.md
@@ -36,7 +36,7 @@
 
 9.补益肝肾法：本法是用补益肝肾的方剂，以治疗肝肾亏损所致眼病的方法。凡见眼干涩不舒、哭而无泪或冷泪长流、白睛微赤、黑睛边缘陷翳，或星点云翳时隐时现、外眼端好而视物昏矇，或夜视不见等，兼见头晕耳鸣、健忘、腰膝酸软、夜间口干、男子遗精、女子月经不调、舌红苔少、脉细无力等症者，均可用本法予以治疗。若见腰膝酸冷、夜间多尿、畏寒脉沉等属于肾阳偏虚者，则当着重温补肾阳。湿邪未除者不可早用本法，非虚忌用。
 
-10.软坚散结法：本法以祛痰软坚，散结消癥，治疗痰湿互结、气滞血凝而致眼病的方法，适用于各种眼病出现的痰湿互结、气血凝滞的证候，如胞脸肿核、白睛结节隆起、眼内陈旧渗出及机化物形成等，可用本法消散之，如偏于气血凝滞者，应与理气活血药物同用，偏于痰湿互结者，则应加强祛痰化湿药物。
+10.软坚散结法：本法以祛痰软坚，散结消癥，治疗痰湿互结、气滞血凝而致眼病的方法，适用于各种眼病出现的痰湿互结、气血凝滞的证候，如胞睑肿核、白睛结节隆起、眼内陈旧渗出及机化物形成等，可用本法消散之，如偏于气血凝滞者，应与理气活血药物同用，偏于痰湿互结者，则应加强祛痰化湿药物。
 
 11.退翳明目法：本法是消退黑睛翳障的独特治法，仅适用于黑睛生翳者。
 
