--- a/ok/yk/yk0zl03-0.2.0.0.0.md
+++ b/ok/yk/yk0zl03-0.2.0.0.0.md
@@ -32,7 +32,7 @@
 
 （2）任脉：任脉总任一身之阴经。起于中极之下，沿着腹里上行，上颐循承浆，环绕口唇，分两支上行，系两目下之中央，至承泣而终。
 
-（3）阴跷脉、阳跷脉：阴跷、阳跷脉分别主一身左右之阴阳。阴跷脉起于足跟内侧，上目内眦而入通于太阳、阳跷。阳跷脉起于足跟外侧，上目内眦而合于太阳、阴跷。足太阳经自项入脑，别络于阴跷、阳跷，而阴阳跷脉又相交于目内眦之睛明穴，其气并行回环，濡养眼目，且司眼脸之开合。通常卫气出于阳则张目，入于阴则闭目。若阳跷气盛而阴气虚，则目张不合；若阴跷气盛而阳气虚，则目闭不张。外邪客于跷脉，则可引起目赤痛或胬肉攀睛等。
+（3）阴跷脉、阳跷脉：阴跷、阳跷脉分别主一身左右之阴阳。阴跷脉起于足跟内侧，上目内眦而入通于太阳、阳跷。阳跷脉起于足跟外侧，上目内眦而合于太阳、阴跷。足太阳经自项入脑，别络于阴跷、阳跷，而阴阳跷脉又相交于目内眦之睛明穴，其气并行回环，濡养眼目，且司眼睑之开合。通常卫气出于阳则张目，入于阴则闭目。若阳跷气盛而阴气虚，则目张不合；若阴跷气盛而阳气虚，则目闭不张。外邪客于跷脉，则可引起目赤痛或胬肉攀睛等。
 
 （4）阳维脉：阳维脉维系诸阳经。起于外踝下足太阳之金门穴，经肢体外后侧，由肩上行至头，经颈部，耳后到前额，经眉上，再由额上顶，折向项后，与督脉会合。因阳主外、主表，故阳维病可见头痛目赤、恶寒发热之类表证。
 
