--- a/ok/yk/yk1gl04-0.3.0.0.0.md
+++ b/ok/yk/yk1gl04-0.3.0.0.0.md
@@ -34,7 +34,7 @@
 
 （2）热炽腑实：
 
-证候：白睛混赤，花翳从四周蔓生，迅速扩大，蔓掩黑珠。可兼眼脸肿胀，眵泪俱多，头目剧痛，烦躁，口苦口渴，溲黄便秘，舌红苔黄，脉数。
+证候：白睛混赤，花翳从四周蔓生，迅速扩大，蔓掩黑珠。可兼眼睑肿胀，眵泪俱多，头目剧痛，烦躁，口苦口渴，溲黄便秘，舌红苔黄，脉数。
 
 治法：清肝泻热。
 
