--- a/ok/yk/yk0zl01-1.2.0.0.0.md
+++ b/ok/yk/yk0zl01-1.2.0.0.0.md
@@ -12,6 +12,6 @@
 
 3.晚唐时期，王焘所撰《外台秘要》一书，内容十分丰富。卷二十一专论眼疾，引用《天竺经•论眼》的内容作为总论，并收载了数十种医书的150首眼科处方。该书谓眼为六神之主，而身由地、水、火、风四大组成。在眼的解剖方面，正确地认识到眼乃轻膜裹水，外膜白晴重数有三，黑睛水膜止有一重。在病源方面，提出了绿翳青盲之类眼病（类似于绿风内障）“皆从内肝管缺，眼孔不通所致”的独到见解，而且指出，该病初发即须速治，病成则不复可疗。该书还提到三种手术治疗：对脑流青盲（内障）“宜用金篦决（即用针拨），一针之后豁若开云而见白日”；对倒睫强调要用镊子拔除，勿使毛断；对类似胬肉之类眼病主张用烧灼法外治。需要说明的是，该书所引《天竺经•论眼》，从内容分析，并非印度医学的翻译作品，而是受了印度医学生理、解剖观点影响的医学著作。
 
-4.唐代盛传的《龙树眼论》一书，是我国著名的眼科专著。可惜原书已经失传。该书在《通志•艺文略》中首次记载，因《艺文略》所载皆是唐朝及唐以前的文献，故可推测此书应为唐或唐以前之著作。《龙树眼论》在《宋史》中仍有记载，至明代《医方类聚》中改称《龙树菩萨眼论》。据考，“龙树”其人系公元2〜3世纪的印度佛教哲学家，也是印度当时的名医，隋唐时期印医传入我国时，还有译成中文的《龙树菩萨药方》等流传。因为“龙树菩萨”在中国有一定的影响，故有人托名而神其书。其内容后经金礼蒙等人收入《医方类聚》，因此而得以保存下来。至于我国现有的《龙树菩萨眼论》两卷，是日本人由朝鲜《医方类聚》中辑录而成。该书所用的眼部解剖名词和病症名称都比以前的眼科文献多。如所用解剖名词：眼脸、眼皮、眼睑皮里、眼带等，皆属首见，并且已有血轮、水轮之名；所提病症名，已增至60余种。手术方面，不仅首次详述了“开内障用针法”，并且提出用割烙法治疗胬肉攀睛。此外，对上“睑皮里有核（胞睑痰核）”施行手术治疗的记载也以它为早。
+4.唐代盛传的《龙树眼论》一书，是我国著名的眼科专著。可惜原书已经失传。该书在《通志•艺文略》中首次记载，因《艺文略》所载皆是唐朝及唐以前的文献，故可推测此书应为唐或唐以前之著作。《龙树眼论》在《宋史》中仍有记载，至明代《医方类聚》中改称《龙树菩萨眼论》。据考，“龙树”其人系公元2〜3世纪的印度佛教哲学家，也是印度当时的名医，隋唐时期印医传入我国时，还有译成中文的《龙树菩萨药方》等流传。因为“龙树菩萨”在中国有一定的影响，故有人托名而神其书。其内容后经金礼蒙等人收入《医方类聚》，因此而得以保存下来。至于我国现有的《龙树菩萨眼论》两卷，是日本人由朝鲜《医方类聚》中辑录而成。该书所用的眼部解剖名词和病症名称都比以前的眼科文献多。如所用解剖名词：眼睑、眼皮、眼睑皮里、眼带等，皆属首见，并且已有血轮、水轮之名；所提病症名，已增至60余种。手术方面，不仅首次详述了“开内障用针法”，并且提出用割烙法治疗胬肉攀睛。此外，对上“睑皮里有核（胞睑痰核）”施行手术治疗的记载也以它为早。
 
 5.《刘皓眼论准的歌》是晚唐时期，在《龙树眼论》的影响下著成的另一部眼科专书。该书在《宋史》中又称《刘皓眼论审的歌》，全书为诗歌体裁，便于记颂。据日本人丹波元胤等考证，在现存《秘传眼科龙木论》中，《龙木总论》之“审的歌”，即属该书内容。《刘皓眼论准的歌》所载的五轮歌及眼病的内、外障分类法，对中医眼科学术的发展影响深远。如后世所出不少以内、外障72症为主的眼科著作，就与它的影响有关。
