--- a/ok/yk/yk0zl07-0.2.2.0.0.md
+++ b/ok/yk/yk0zl07-0.2.2.0.0.md
@@ -6,7 +6,7 @@
 
 1.点眼药法：本法是将药物直接点入眼部，多用以消红眼、祛眵泪、止痛痒、除翳膜。适用于外障眼病及部分内障眼病。常用的有眼药水，眼药粉与眼药膏三种。
 
-（1）滴眼药水：将药物配成水剂应用。用法如患者为坐位，令头部稍微仰起，先在其下眼睑下放置一棉球；如患者为卧位，则令其头微偏向患眼侧，先置一棉球于小眦外侧。令患者双目上视，医生用左手轻轻向下拉开下睑，右手持滴管或滴瓶，将药水滴入大眦角或白睛下方（图9）。然后轻轻将上眼脸提起，并同时放松下睑，使药液充分均匀地分布于眼内，轻轻闭目数分钟即可。一般每次1〜2滴，每日3〜4次。遇急重眼病，可增加。
+（1）滴眼药水：将药物配成水剂应用。用法如患者为坐位，令头部稍微仰起，先在其下眼睑下放置一棉球；如患者为卧位，则令其头微偏向患眼侧，先置一棉球于小眦外侧。令患者双目上视，医生用左手轻轻向下拉开下睑，右手持滴管或滴瓶，将药水滴入大眦角或白睛下方（图9）。然后轻轻将上眼睑提起，并同时放松下睑，使药液充分均匀地分布于眼内，轻轻闭目数分钟即可。一般每次1〜2滴，每日3〜4次。遇急重眼病，可增加。
 
 <img src="img\9.jpg" style="zoom:50%;" />
 
