update ok/bc/bc08-0.0.2.0.0.md. 按照扫描版修改标点符号。

--- a/ok/bc/bc08-0.0.2.0.0.md
+++ b/ok/bc/bc08-0.0.2.0.0.md
@@ -1,6 +1,6 @@
 ### 牛黄
 
-  **〔原文〕甘凉。牛有病，在心肝胆之间，凝结成黄，故还以治心、肝、胆之病**。<small>《经疏》曰：牛食百草，其精华凝结成黄，犹人之有内丹。故能散火消痰解毒，为世神物。或云牛病乃生黄者非也。</small>**清心解热，利痰止惊，通窍辟邪。治中风入脏，惊痫口噤**，<small>心热则火自生焰，肝热则木自生风，风火相搏，胶痰上壅，遂致中风不语。李东垣曰：中脏宜之。若中腑及血脉者用之，反能引风入骨，如油入面。按中风，中脏者重，多滞九窍，中腑稍轻，多著四肢。若外无六经形证，内无便溺阻隔，为中经络，为又轻。初宜顺气开痰，次宜养血活血，不宜专用风药。大抵五脏皆有风，而犯肝者为多。肝属风木而主筋，肝病不能营筋，故有舌强口噤、㖞斜、瘫痪不遂不仁等证。若口开为心绝；手撒为脾绝； 眼合为肝绝；遗尿为肾绝；吐沫鼻鼾为肺绝，发直头摇、面赤如妆、汗涰如珠者，皆不治，若只见一二证，犹有可治者。</small>**小儿百病**。<small>皆胎毒痰热所生。儿初生时未食乳，用三五厘，合黄连甘草末蜜调，令咂之良。</small>**发痘堕胎**。<small>善通窍。</small>**牛有黄，必多吼唤，以盆水承之，伺其吐出，迫喝即堕水，名生黄，如鸡子黄大，重叠可揭，轻虚气香者良**，<small>观此则非病乃生黄矣。</small>**杀死角中得者名角黄，心中者名心黄，肝胆中者名肝胆黄，成块成粒，总不及生者。但磨指甲上，黄透指甲者真**。<small>骆驼黄极易得，能乱真。</small>**得牡丹，菖蒲良**。<small>聪耳明目。</small>**人参为使。恶龙骨、龙胆、地黄、常山。**
+  **〔原文〕甘凉。牛有病，在心肝胆之间，凝结成黄，故还以治心、肝、胆之病**。<small>《经疏》曰：牛食百草，其精华凝结成黄，犹人之有内丹。故能散火消痰解毒，为世神物。或云牛病乃生黄者非也。</small>**清心解热，利痰止惊，通窍辟邪。治中风入脏，惊痫口噤**，<small>心热则火自生焰，肝热则木自生风，风火相搏，胶痰上壅，遂致中风不语。李东垣曰：中脏宜之。若中腑及血脉者用之，反能引风入骨，如油入面。按中风，中脏者重，多滞九窍；中腑稍轻，多著四肢。若外无六经形证，内无便溺阻隔，为中经络，为又轻。初宜顺气开痰，次宜养血活血，不宜专用风药。大抵五脏皆有风，而犯肝者为多。肝属风木而主筋，肝病不能营筋，故有舌强口噤、㖞斜、瘫痪不遂不仁等证。若口开为心绝；手撒为脾绝； 眼合为肝绝；遗尿为肾绝；吐沫鼻鼾为肺绝，发直头摇、面赤如妆、汗涰如珠者，皆不治，若只见一二证，犹有可治者。</small>**小儿百病**。<small>皆胎毒痰热所生。儿初生时未食乳，用三五厘，合黄连甘草末蜜调，令咂之良。</small>**发痘堕胎**。<small>善通窍。</small>**牛有黄，必多吼唤，以盆水承之，伺其吐出，迫喝即堕水，名生黄，如鸡子黄大，重叠可揭，轻虚气香者良**，<small>观此则非病乃生黄矣。</small>**杀死角中得者名角黄，心中者名心黄，肝胆中者名肝胆黄，成块成粒，总不及生者。但磨指甲上，黄透指甲者真**。<small>骆驼黄极易得，能乱真。</small>**得牡丹，菖蒲良**。<small>聪耳明目。</small>**人参为使。恶龙骨、龙胆、地黄、常山。**
 
   【讲解】**牛黄善能开窍豁痰，息风定惊，又能清热解毒**。为牛科动物牛的胆囊、胆管，或肝管中的结石，称天然牛黄，又名西黄、犀黄。由牛胆汁或猪胆汁提取加工制成的称人工牛黄。天然牛黄完整者呈卵形或三角形，表面金黄色或棕黄色，深浅不一，有排列整齐的环状层纹，重重相叠。气清香、味先微苦、后微甘。以少许粉末和以清水，涂于指甲上，能染为黄色，经久不褪，习称"透甲”或"挂甲”。人工牛黄，大多呈粉末状，或不规则球形，表面浅棕色或金黄色，涂于指甲亦能染成黄色。研末用。
 
