update ok/wk/wk13-0.9.0.0.0.md. 原文有“本病一经诊断，就应早期等虑手术 ”，应为“本病一经诊断，就应早期考虑手术 ”，电子版已改。

--- a/ok/wk/wk13-0.9.0.0.0.md
+++ b/ok/wk/wk13-0.9.0.0.0.md
@@ -4,13 +4,13 @@
 
 〔病因病机〕
 
-由于忧思抑郁，以致气滞血瘀，湿热下注而蕴结，或由饮食不节、嗜酒、久泻、久痢等阴阳不调，体内衰竭导致、本病的发生。如不及时发现、治疗，迁延日久，往往转移他处，有直接转移：即沿肠道环状进行，故容易形成肠腔狭窄，而成为“锁肛痔”。后期可穿过肠壁，蔓延至邻近器官。有淋巴转移：可沿直肠上静脉的淋巴结，转移至腹股沟淋巴结等处。有血行转移，可通过直肠上静脉、肠系膜下静脉、门静脉等转移至肝脏。
+由于忧思抑郁，以致气滞血瘀，湿热下注而蕴结，或由饮食不节、嗜酒、久泻、久痢等阴阳不调，体内衰竭导致本病的发生。如不及时发现、治疗，迁延日久，往往转移他处，有直接转移：即沿肠道环状进行，故容易形成肠腔狭窄，而成为“锁肛痔”。后期可穿过肠壁，蔓延至邻近器官。有淋巴转移：可沿直肠上静脉的淋巴结，转移至腹股沟淋巴结等处。有血行转移，可通过直肠上静脉、肠系膜下静脉、门静脉等转移至肝脏。
 
 〔辨证论治〕
 
 （一）辨证要领
 
-一是辨主证，如排便习惯改变，或为排便次数增多，或为便秘，或为二者交替出现。便血，大便带血，或粪便内有血、脓、粘液，并有特殊臭味。大便变形，大便变细、变扁或为铅笔样等。二是做必要的检查。直肠指检，肛管癌在肛门部可看到突起包块或溃疡，基底不平，质硬。直肠指检，对直肠癌早期诊断具有极其重要的意义。指检时可触到肠壁上有硬结性高低不平的肿块，肠腔常有狭窄，指套上染有血、脓和粘液。直肠镜检查，可以看到直肠内病变的范围、形态，而且可以钳取小块组织作病理检查。
+一是辨主证，如排便习惯改变，或为排便次数增多，或为便秘，或为二者交替出现。便血，大便带血，或粪便内有血、脓、粘液，并有特殊臭味。大便变形，大便变细、变扁或为铅笔样等。二是做必要的检查。直肠指检：肛管癌在肛门部可看到突起包块或溃疡，基底不平，质硬。直肠指检，对直肠癌早期诊断具有极其重要的意义。指检时可触到肠壁上有硬结性高低不平的肿块，肠腔常有狭窄，指套上染有血、脓和粘液。直肠镜检查：可以看到直肠内病变的范围、形态，而且可以钳取小块组织作病理检查。
 
 本病还应与痢疾、痔疮、肛裂等鉴别。
 
@@ -48,7 +48,7 @@
 
 2.灌肠：败酱草30克、白花蛇舌草30克、干蟾皮10克，水煎80毫升，保留灌肠，每日两次，每次40毫升。
 
-3.手术：本病一经诊断，就应早期等虑手术。
+3.手术：本病一经诊断，就应早期考虑手术。
 
 （五）临证权变
 
