update ok/wk/wk09-0.6.0.0.0.md. 原文“三胶丸由六味地黄丸加土鹿角胶、鳖甲胶、龟板胶各30克组成，”应为“三胶丸由六味地黄丸加上鹿角胶、鳖甲胶、龟板胶各30克组成，”电子版已改。

--- a/ok/wk/wk09-0.6.0.0.0.md
+++ b/ok/wk/wk09-0.6.0.0.0.md
@@ -38,7 +38,7 @@
 
 服药后患儿体质遂渐强壮，舌苔薄，局部病变短期内未见明显变化，1966年5月X线复查骨质病变区明显好转，仍服上药。1968年5月再次X线复查，“局限性骨质隆起已明显消退，乃停药观察，1975年患者复查X线表现正常。至1981年患者已21岁，身体健康。
 
-按：大龟丸由乌龟1个（约1斤左右），雄黄15克，胡椒、山甲各9克组成，为滋补肾阴，软坚解毒散结之品。三胶丸由六味地黄丸加土鹿角胶、鳖甲胶、龟板胶各30克组成，六味丸滋补肾阴，三胶为血肉有情之品，填精补髓，守法坚持服药三年，终于痊愈。（节选自《中医杂志》1981.47:9段凤午）
+按：大龟丸由乌龟1个（约1斤左右），雄黄15克，胡椒、山甲各9克组成，为滋补肾阴，软坚解毒散结之品。三胶丸由六味地黄丸加上鹿角胶、鳖甲胶、龟板胶各30克组成，六味丸滋补肾阴，三胶为血肉有情之品，填精补髓，守法坚持服药三年，终于痊愈。（节选自《中医杂志》1981.47:9段凤午）
 
 〔文献摘录〕
 
