update ok/gl/gl06-0.3.0.0.0.md. 《肝病辩证表》肝胆湿热 - 病因：‘外感温湿热邪气’，当为‘外感温热邪气’，据原书改之。 原书243页， 肝胆湿热 - 病因：‘外感温热邪气’，当为 ‘外感湿热邪气’，按规则记而不改。

--- a/ok/gl/gl06-0.3.0.0.0.md
+++ b/ok/gl/gl06-0.3.0.0.0.md
@@ -17,7 +17,7 @@
 | 心阴虚   | 同上                                                      | 阴虚火旺，神不内守                     | 同上                         | 低热，盗汗，五心烦热，口干                                   | 舌红少津         | 细数         |
 | 心火亢盛 | ①情志化火<br />②六淫化火<br />③过食辛辣厚味或过服温补药物 | 心火扰神，或伤阴动血                   |                              | 烦躁失眠，口渴，口舌糜烂疼痛，吐血，衄血                     | 舌红             | 数           |
 | 心血瘀阻 | 心气虚或心阳虚，再加劳累受寒，或情绪激动，或痰浊凝聚      | 心血瘀阻，血脉壅滞                     |                              | 心悸不宁，心胸绞痛，时作时止，痛引臂内，重者肢冷，面、唇、指甲青紫 | 舌紫暗，或有瘀斑 | 细涩或见结代 |
-| 痰火扰心 | 情志所伤                                                  | 五志化火，灼液成痰,痰火犯扰心神        | 神志失常                     | 心烦，失眠，易惊，口渴。重则语无伦次，哭笑无常，狂躁，打人骂人 | 舌红苔黄腻       | 弦滑有力     |
+| 痰火扰心 | 情志所伤                                                  | 五志化火，灼液成痰，痰火犯扰心神        | 神志失常                     | 心烦，失眠，易惊，口渴。重则语无伦次，哭笑无常，狂躁，打人骂人 | 舌红苔黄腻       | 弦滑有力     |
 | 痰迷心窍 | 同上                                                      | 情志抑郁，气机阻滯，气结痰凝，迷阻心窍 | 同上                         | 精神抑郁，自言自语，如呆若痴。多疑善恐，或幻视幻听           | 苔白腻           | 沉弦滑       |
 
 ![](img/6表11肺病辨证简表.jpg)
@@ -53,7 +53,7 @@
 | 肝风内动 | 肝阻化风 | 肝肾阴虚，肝阳上亢                           | 阳虚阳亢，肝风内动                     | 震颤肢麻，或痉挛抽搐，头晕目眩 | 眩晕头痛，震颤肢麻，手足蠕动，语言不利，步履不正，欲仆倒     | 舌红     | 弦细 |
 | 肝风内动 | 血虚生风 | 肝血不足                                     | 肝血不足，筋脉失养，拘急挛缩           | 同上                           | 视物模糊，面色萎黄，手足麻木颤抖                             | 舌淡少苔 | 弦细 |
 | 肝风内动 | 热极生风 | 肝热炽盛                                     |                                        | 同上                           | 高热神昏，四肢抽搐，项强，甚则角弓反张                       | 舌红绛   | 弦数 |
-| 肝胆湿热 |          | ①外感温湿热邪气<br />②素嗜肥甘酒酪，湿热内蕴 | 湿热内蕴，肝失疏泄，胆汁外溢           |                                | 胸胁满闷疼痛，黄疸，色鲜明如橘子色，小便短赤。或妇女带下色黄腥臭，男子睾丸肿胀热痛，外阴湿痒 | 苔黄腻   | 弦数 |
+| 肝胆湿热 |          | ①外感温热邪气<br />②素嗜肥甘酒酪，湿热内蕴 | 湿热内蕴，肝失疏泄，胆汁外溢           |                                | 胸胁满闷疼痛，黄疸，色鲜明如橘子色，小便短赤。或妇女带下色黄腥臭，男子睾丸肿胀热痛，外阴湿痒 | 苔黄腻   | 弦数 |
 | 寒滞肝脉 |          | 寒邪侵袭肝经                                 | 寒凝气滞，血脉凝涩                     |                                | 少腹胀痛，牵引睾丸，或睾丸胀大下坠，或阴囊冷缩               | 舌苔白滑 | 沉弦 |
 
 ![](img/6表14肾病辨证简表.jpg)
