update ok/wk/wk12-0.10.0.0.0.md. 1、应用案例后面的**按**，按照原文修改为“按”

--- a/ok/wk/wk12-0.10.0.0.0.md
+++ b/ok/wk/wk12-0.10.0.0.0.md
@@ -64,7 +64,7 @@
 
 许X，女，24岁，门诊号61644。1973年11月20日初诊。两手发疹瘙痒4、5年，严重时溃烂，当春暧时可自愈。曾按冻疮治疗无效。比较怕冷，别无不适。检查：两手掌手背均有散在的水肿性红斑，黄豆到蚕豆大小，突出于皮肤表面，色暗红。部分红斑中央有水疱，少数糜烂结痂。苔薄白，脉正常。西医诊为多形性红斑，证属风寒阻于肌肤，以致营卫运行不畅。拟桂枝汤加味以调和营卫。川桂枝6克、赤白芍各9克、当归9克、威灵仙12克、生姜皮3克、大枣5枚、生甘草3克，水煎服。外用杜红花9克、细辛9克、甘草6克，煎汤待温浸手，日两次，每次20分钟。4天后红斑转淡，水疱消失，本有关节痠痛，药后也有减轻，稍感口干。再宗原意。前方去生姜皮加红花、生地各9克。头煎内服，二煎浸手。又7剂痊愈，1974年没有再发。
 
-**按**：本病为风寒阻于肌肤，营卫不和所致，桂枝温经通阳，发表散寒，可解除肌表风寒之邪；芍药敛阴和营，且可监制桂枝；当归、红花、大枣养血和血，使营卫气血流行通畅则病邪自除。（节选自顾伯华《外科经验选》）
+按：本病为风寒阻于肌肤，营卫不和所致，桂枝温经通阳，发表散寒，可解除肌表风寒之邪；芍药敛阴和营，且可监制桂枝；当归、红花、大枣养血和血，使营卫气血流行通畅则病邪自除。（节选自顾伯华《外科经验选》）
 
 〔简便验方〕
 
