update ok/hk/hk1gl01-0.8.0.0.0.md. 标题字体缩小 罍若虾（癞虾蟆）皮  壘

--- a/ok/hk/hk1gl01-0.8.0.0.0.md
+++ b/ok/hk/hk1gl01-0.8.0.0.0.md
@@ -1,4 +1,4 @@
-## 虚火喉痹之三（干燥性咽喉炎、萎缩性咽喉炎）
+## 虚火喉痹<small>之三（干燥性咽喉炎、萎缩性咽喉炎）</small>
 
 干燥性咽喉炎、萎缩性咽喉炎，为一种病程极长而又极为难治的咽、喉慢性病。其早期萎缩的程度尚未达到严重阶段者，则例称干燥性咽炎、干燥性喉炎。
 
@@ -14,7 +14,7 @@
 
 萎缩性喉炎，则声音嘶哑无力，是其主要症状。故《喉科泄秘》谓之：“甚至饮食为之凝，碱物染之痛，久必致哑”。由于喉粘膜分泌腺的萎缩，所以喉内常有稠厚的粘液，甚至形成皮痂，引起剧烈的刺激性咳嗽。所以《喉科心法（潘氏）》称之为“痨嗽咽喉痛”。假如用现代语来解释，是喉源性咳嗽。
 
-萎缩性咽炎的咽部所见，都可看到一定的病变。特出的是咽后壁，它的粘膜失去正常的光泽，每当咽反射时或咽缩肌收缩之际，粘膜起皱，更容易看出它的干燥枯槁的表现。且有稠厚的分泌物，紧贴在咽壁上，形成一层膜样物，甚至以其干燥而成为灰色的痂皮。所以《喉科紫珍集》描写为“斑生苔癣，罍若虾（癞虾蟆）皮”。
+萎缩性咽炎的咽部所见，都可看到一定的病变。特出的是咽后壁，它的粘膜失去正常的光泽，每当咽反射时或咽缩肌收缩之际，粘膜起皱，更容易看出它的干燥枯槁的表现。且有稠厚的分泌物，紧贴在咽壁上，形成一层膜样物，甚至以其干燥而成为灰色的痂皮。所以《喉科紫珍集》描写为“斑生苔癣，壘若虾（癞虾蟆）皮”。
 
 萎缩性喉炎，在喉部可见粘膜的干燥充血。声门部常有稠厚的分泌物在前部粘住两侧的声带。声带可能松弛无力，以致在发“衣”时声带中央部闭合不全，成一梭缝。
 
