update ok/ya/ya01-0.26.0.0.0.md. 天子头上，岂是出血处邪！ 原著和电子版都是  邪   字，应该是原著有误，电子版也应该改正
天子头上，岂是出血处耶！

--- a/ok/ya/ya01-0.26.0.0.0.md
+++ b/ok/ya/ya01-0.26.0.0.0.md
@@ -1,6 +1,6 @@
 ## 1.26 秦鸣鹤治风眩案
 
-唐高宗苦风眩头，目不能视，召侍医秦鸣鹤诊之。秦曰：风毒上攻，若刺头出少血愈矣。天后自帘中怒曰：此可斩也！天子头上，岂是出血处邪！鸣鹤叩头请命。上曰：医人议病，理不加罪。且我头重闷，殆不可忍，出血未必不佳，朕意决矣。命刺之。鸣鹤刺[百会](https://www.gmzyjc.com/read/zjs/zjs3.2.2-0.0.1.3.20.md)及[脑户](https://www.gmzyjc.com/read/zjs/zjs3.2.2-0.0.1.3.17.md)出血。上曰：我眼明矣。言未毕，后自帘中顶礼①以谢之。
+唐高宗苦风眩头，目不能视，召侍医秦鸣鹤诊之。秦曰：风毒上攻，若刺头出少血愈矣。天后自帘中怒曰：此可斩也！天子头上，岂是出血处耶！鸣鹤叩头请命。上曰：医人议病，理不加罪。且我头重闷，殆不可忍，出血未必不佳，朕意决矣。命刺之。鸣鹤刺[百会](https://www.gmzyjc.com/read/zjs/zjs3.2.2-0.0.1.3.20.md)及[脑户](https://www.gmzyjc.com/read/zjs/zjs3.2.2-0.0.1.3.17.md)出血。上曰：我眼明矣。言未毕，后自帘中顶礼①以谢之。
 
 （《医部全录•医术名流列传》）
 
