update ok/gl/gl06-0.4.0.0.0.md. 第1段第5行：‘共所络属的脏腑’，当为 ‘其所络属的脏腑’，此字原书略模糊，对比其它‘其’字及上下文可确认，改之。

--- a/ok/gl/gl06-0.4.0.0.0.md
+++ b/ok/gl/gl06-0.4.0.0.0.md
@@ -1,6 +1,6 @@
 ##  第四节六经辨证
 
-六经辨证，是用于外感风寒之邪在发病过程中的辨证分类方法。是伤寒病的辨证纲领。它按照伤寒病的发生发展规律及其发展过程中各阶段的病变特点，将其分为六类病证，并以阴阳为纲，将其概括为三阳、三阴两大类别。具体地说，六经病证是太阳病、阳明病、少阳病，太阴病、少阴病、厥阴病的总称。它可以概括为三阳病和三阴病两大类。太阳病、阳明病、少阳病为三阳病；太阴病、少阴病、厥阴病为三阴病。三阳病证以六腑病变为基础，三阴病证以五脏病变为基础。所以说，六经辨证实际上是以六经统括共所络属的脏腑，因而它基本上概括了脏腑十二经病证，并以此来标示它们之间的传变规律。
+六经辨证，是用于外感风寒之邪在发病过程中的辨证分类方法。是伤寒病的辨证纲领。它按照伤寒病的发生发展规律及其发展过程中各阶段的病变特点，将其分为六类病证，并以阴阳为纲，将其概括为三阳、三阴两大类别。具体地说，六经病证是太阳病、阳明病、少阳病，太阴病、少阴病、厥阴病的总称。它可以概括为三阳病和三阴病两大类。太阳病、阳明病、少阳病为三阳病；太阴病、少阴病、厥阴病为三阴病。三阳病证以六腑病变为基础，三阴病证以五脏病变为基础。所以说，六经辨证实际上是以六经统括其所络属的脏腑，因而它基本上概括了脏腑十二经病证，并以此来标示它们之间的传变规律。
 
 六经病证从病变部位来划分，太阳病主表，阳明病主里，少阳病主半表半里，而三阴病统属于里。从病变的性质与邪正关系分，三阳病多热证、实证；三阴病多寒证、虚证。从传变规律来看，一般是由三阳传入三阴，由表入里，深入发展。
 
