update ok/hk/hk1gl01-0.10.0.0.0.md. 标题字体缩小 燥湿为乎段 手 而转、白者  多了一個標點

--- a/ok/hk/hk1gl01-0.10.0.0.0.md
+++ b/ok/hk/hk1gl01-0.10.0.0.0.md
@@ -1,4 +1,4 @@
-## 口疮（咽部疱疹）
+## 口疮<small>（咽部疱疹）</small>
 
 本病如以传统病名来对照，《尤氏喉科秘书》、《咽喉经验秘传》的喉刺，在症状描写上十分相似，但在预后方面距离太远。《喉科杓指》的帘珠喉也很相仿，但本病决没有“满喉如白网油状，两边微肿”的症状。《喉科指掌》的气子描写，也似乎相符，但病程以“年”计算，则又不恰。总之在古文献中很难找到最恰当的名称。
 
@@ -14,13 +14,13 @@
 
 〔常见证因〕
 
-脾胃积热，郁蒸上凌而致。因为热蕴过久，势必蒸酵而化为湿浊。内中湿性下沉，多犯下身，唯有浊气的轻浮飞扬、㳽漫上扰而转犯头面，尤其是宣清诸窍。不过这种浊气，毕竟是由湿邪所致，在治疗上依然以化湿、理湿、燥湿为乎段。
+脾胃积热，郁蒸上凌而致。因为热蕴过久，势必蒸酵而化为湿浊。内中湿性下沉，多犯下身，唯有浊气的轻浮飞扬、㳽漫上扰而转犯头面，尤其是宣清诸窍。不过这种浊气，毕竟是由湿邪所致，在治疗上依然以化湿、理湿、燥湿为手段。
 
 〔辨证论治〕
 
 （一）辨证要领
 
-初期一般大多为充血的，所以主为火为热。之后，糜烂而转、白者，即应考虑湿浊，但仍然不能忘掉它毕竟是属火属热。
+初期一般大多为充血的，所以主为火为热。之后，糜烂而转白者，即应考虑湿浊，但仍然不能忘掉它毕竟是属火属热。
 
 （二）论证要点
 
