update ok/hk/hk1gl01-0.11.0.0.0.md. 标题字体缩小

--- a/ok/hk/hk1gl01-0.11.0.0.0.md
+++ b/ok/hk/hk1gl01-0.11.0.0.0.md
@@ -1,4 +1,4 @@
-## 飞疡喉（咽粘膜下出血）
+## 飞疡喉<small>（咽粘膜下出血）</small>
 
 它是在咽部，尤其是悬雍垂及其周围的软腭粘膜，陡然在1〜2分钟之内产生大小不一定的血疱。它是一种轻症小恙，可是在历来喉科专业书中，都说成是重病危症。如《喉科杓指》、《喉科秘旨》的“凶恶之症”等，都不符合临床实际。但以其发病极快，来势凶猛迅速，所以古人即以“飞疡”来称它。
 
