update ok/ya/ya01-0.32.0.0.0.md. 段落，另起一行

--- a/ok/ya/ya01-0.32.0.0.0.md
+++ b/ok/ya/ya01-0.32.0.0.0.md
@@ -10,4 +10,6 @@
 
 ②姨奶：女奴仆。
 
-③诳（kuáng狂）绐（dài怠）：用谎言哄骗。〔评按〕此乃用精神疗法治疗疑郁的验案，正所谓“心病仍须心药治”。惟此疗法的先决条件必须是病因清楚，诊断无误，对治疗结果有把握，而且治疗过程必须做到慎密而无破绽，使患者深信不疑才行。
+③诳（kuáng狂）绐（dài怠）：用谎言哄骗。
+
+**〔评按〕**此乃用精神疗法治疗疑郁的验案，正所谓“心病仍须心药治”。惟此疗法的先决条件必须是病因清楚，诊断无误，对治疗结果有把握，而且治疗过程必须做到慎密而无破绽，使患者深信不疑才行。
