update ok/ya/ya01-0.34.0.0.0.md. 醺醺（xun熏） 修正为： 醺醺（xūn熏）

--- a/ok/ya/ya01-0.34.0.0.0.md
+++ b/ok/ya/ya01-0.34.0.0.0.md
@@ -12,7 +12,7 @@
 
 ③修服：按法度配制，依常规服用。
 
-④醺醺（xun熏）：酒醉态。
+④醺醺（xūn熏）：酒醉态。
 
 **〔评按〕**本案证属风湿痹痛，由肾阴亏耗，风寒湿三气杂至而成。又据药测证，必有寒湿化热、阴虚生热之象。方用[海桐皮](https://www.gmzyjc.com/read/bc/bc06-0.0.13.0.0.md)、[牛膝](https://www.gmzyjc.com/read/bc/bc12-0.0.21.0.0.md)、川芎、[羌活](https://www.gmzyjc.com/read/bc/bc01-1.1.6.0.0.md)、[五加皮](https://www.gmzyjc.com/read/bc/bc06-0.0.6.0.0.md)祛风除湿散寒，[薏苡仁](https://www.gmzyjc.com/read/bc/bc05-0.0.5.0.0.md)清利湿热，[地骨皮](https://www.gmzyjc.com/read/bc/bc03-0.5.3.0.0.md)清阴虚之热，[生地黄](https://www.gmzyjc.com/read/bc/bc03-0.3.2.0.0.md)滋阴养血。该方既去邪又扶正，用酒浸饮，久服必有效验。
 
