update ok/ya/ya01-0.20.0.0.0.md. 昨天误删两处超链接，今改正还原：
五味：即[五味子](https://www.gmzyjc.com/read/bc/bc18-0.0.2.0.0.md)

[羊肉](https://www.gmzyjc.com/read/bc/bc17-0.2.22.0.0.md)

--- a/ok/ya/ya01-0.20.0.0.0.md
+++ b/ok/ya/ya01-0.20.0.0.0.md
@@ -12,8 +12,8 @@
 
 ③杏酪：用杏子做成的糊状食品。
 
-④五味：即[五味子]。
+④五味：即[五味子](https://www.gmzyjc.com/read/bc/bc18-0.0.2.0.0.md)。
 
 ⑤脔（luán峦）掰（bāi）：撕掰分开。
 
-**〔评按〕**中国自古就有医食同源，药食同源之说。本案中的杏酪、五味，在古代皆作为调味之品，与鲜肥羊肉同蒸而食，食补兼药补，取得了良好的疗效，为用食疗治疗虚眩提供了可资借鉴之经验。此案为巢元方的医案传于今所仅见者。
+**〔评按〕**中国自古就有医食同源，药食同源之说。本案中的杏酪、五味，在古代皆作为调味之品，与鲜肥[羊肉](https://www.gmzyjc.com/read/bc/bc17-0.2.22.0.0.md)同蒸而食，食补兼药补，取得了良好的疗效，为用食疗治疗虚眩提供了可资借鉴之经验。此案为巢元方的医案传于今所仅见者。
