--- a/ok/bc/bc03-0.3.1.0.0.md
+++ b/ok/bc/bc03-0.3.1.0.0.md
@@ -1,7 +1,7 @@
 ### 犀 角
 
 **〔原文〕苦酸咸寒。涼心泻肝，清胃中大热，祛风利痰，辟邪解毒。治伤寒时疫**(1)，**发黄**(2)**发斑**，
-伤寒下早，热乘虚入胃则发斑；下迟，热留胃中亦发斑。**吐血下血，蓄血**（3）**谵狂，痘疮黑陷。消痈化脓，定惊明目**。**妊妇忌之**。能消胎气。时珍曰：五脏六腑，皆禀气于胃。风邪热毒，必先干之，饮食药物，必先入胃。角，犀之精华所聚，足阳明胃药也。故能入阳明，解一切毒，疗一切血，及惊狂斑痘之证。《抱朴子》曰：犀食百草之毒及棘，故能解毒，饮食有毒，以角搅之，则生白沫。**乌而光润者胜，角尖尤胜**。 鹿取茸，犀取尖，其精气尽在是也。**现成器物，多被蒸煮，不堪入药。入汤剂磨汁用，入丸散锉细。纸裹纳怀中，待热捣之立碎**。《归田录》日：人气粉犀。**升麻为使。忌盐。**
+伤寒下早，热乘虚入胃则发斑；下迟，热留胃中亦发斑。**吐血下血，蓄血**（3）**谵狂，痘疮黑陷。消痈化脓，定惊明目**。**妊妇忌之**。能消胎气。时珍曰：五脏六腑，皆禀气于胃。风邪热毒，必先干之，饮食药物，必先入胃。角，犀之精华所聚，足阳明胃药也。故能入阳明，解一切毒，疗一切血，及惊狂斑痘之证。《抱朴子》曰：犀食百草之毒及棘，故能解毒，饮食有毒，以角搅之，则生白沫。**乌而光润者胜，角尖尤胜**。 鹿取茸，犀取尖，其精气尽在是也。**现成器物，多被蒸煮，不堪入药。入汤剂磨汁用，入丸散锉细。纸裹纳怀中，待热捣之立碎**。《归田录》曰：人气粉犀。**升麻为使。忌盐。**
 
 【讲解】（1）时疫:指有季节性流行性传染病。（2）发黄：指由各种不同原因引起遍身皮肤或眼巩膜发黄的证状。（3）蓄血：病证名。指外感热病，邪热人里，与血相搏，而致瘀热蓄结于内的病证。
 
