update ok/gl/gl02-0.0.4.0.0.md. 尽管藏象学说中的脏腑与现代解剖学中腑器的名称基本相同中的腑器是不是应为脏器？

--- a/ok/gl/gl02-0.0.4.0.0.md
+++ b/ok/gl/gl02-0.0.4.0.0.md
@@ -26,6 +26,6 @@
 
 （2）藏象学说用五行理论来概括脏腑的功能属性，同时阐明它们之间的相互关系。如：心属火，肺属金，心火与肺金之间有着相互制约的关系，在生理状态下，心火的温煦使肺金不寒，而不致清肃过度，肺金的肃降亦可抑制心火的亢炎；在病理变化时，心火的亢盛，会使肺失肃降而喘逆，同时肺金的肃降失调亦能影响心火的盛衰。据此可知，运用五行理论来概括脏腑的功能属性，阐明其相互关系亦能起到纲举目张的作用。
 
-由于藏象学说具有以上两大特点，因此，尽管藏象学说中的脏腑与现代解剖学中腑器的名称基本相同，但二者是有着不同内涵的两个概念。中医学中一个脏腑的功能，可能包括西医几个脏器的功能，而西医学一个脏器的功能，又可能分散在中医几个脏腑功能之中。所以，藏象学说中的脏腑不单是一个解剖学的概念，更重要的是一个生理病理学的概念。
+由于藏象学说具有以上两大特点，因此，尽管藏象学说中的脏腑与现代解剖学中脏器的名称基本相同，但二者是有着不同内涵的两个概念。中医学中一个脏腑的功能，可能包括西医几个脏器的功能，而西医学一个脏器的功能，又可能分散在中医几个脏腑功能之中。所以，藏象学说中的脏腑不单是一个解剖学的概念，更重要的是一个生理病理学的概念。
 
 了解脏象学说的特点，可以使我们在学习藏象学说的具体内容时，不仅了解各个脏腑的主要功能，同时能掌握每一脏腑的功能与整体间的有机联系，掌握各个功能之间的相互关系，从而更好地掌握和运用这一基本理论，来指导临床实践。
