update ok/wk/wk15-0.2.0.0.0.md. 1.原文有“皮肤光亮，触痛护按”，应为“皮肤光亮，触痛拒按”，电子版已改。

--- a/ok/wk/wk15-0.2.0.0.0.md
+++ b/ok/wk/wk15-0.2.0.0.0.md
@@ -4,7 +4,7 @@
 
 〔病因病机〕
 
-寒冷是引起冻疮的重要原因，尤其在潮湿、刮风的情况下更易引起。素体气血衰弱，缺乏运动，手足多汗，疲劳饥饿或长时间静止不动是引起冻疮的内在因素。此外暴冻遇热或暴热遇冻也能促使本病的发生。《石室秘录》中说：“冻疮乃人不耐寒，而肌肤受冷，骤用火烘，乃成冻疮，至于耳上受冻，必是用手温之，反成此累也。”
+寒冷是引起冻疮的重要原因，尤其在潮湿、刮风的情况下更易引起。素体气血衰弱，缺乏运动，手足多汗，疲劳饥饿或长时间静止不动是引起冻疮的内在因素。此外暴冻遇热或暴热遇冻也能促使本病的发生。《石室秘录》中说：“冻疮乃人不耐寒，而肌肤受冷，骤用火烘，乃成冻疮，至于耳上受冻，必是用手温之，反成此累也”。
 
 〔辨证论治〕
 
@@ -48,7 +48,7 @@
 
 〔应用例案〕
 
-王XX，男，33岁。1974年11月11日初诊。三年前双足跟冻伤，此后每年初冬即犯。今冬已发病一月余，双足跟肿痛轻痒，行走不便。体温38.9℃，面色苍白，双足跟红肿处为6X6厘米大小，皮肤光亮，触痛护按，按之应指。白细胞计数24100/立方厘米。舌苔黄，舌质红，脉沉弦，此乃冻疮继发感染。证属寒湿凝滞，化热成毒。治拟清热解毒，托里透脓。药用：银花18克、公英18克、皂刺9克、白芷9克、桔梗9克、生黄芪18克、归尾9克、赤芍9克、牛膝9克、甘草3克、炒山甲9克。外用铁箍散软膏外敷。11月14日复诊：上方3剂后脓肿自溃，体温正常。乃以上方去银花、公英，加肉桂9克；局部清除腐肉，薄薄干撒甲字提毒粉，外贴阳和解凝膏。11月25日三诊：疮口已小，腐肉已清，新肌已生，改用益气养血之法。药用：生黄芪24克、党参24克、归尾9克、赤芍9克、云苓15克、白术12克、肉桂15克、牛膝9克、甘草9克。12月5日四诊：疮面为1.5X2厘米。改服阳和丸，每服2丸，人参养荣丸，每服2丸。12月15日停服阳和丸，改服肾气丸，12月30日疮面痊愈。
+王XX，男，33岁。1974年11月11日初诊。三年前双足跟冻伤，此后每年初冬即犯。今冬已发病一月余，双足跟肿痛轻痒，行走不便。体温38.9℃，面色苍白，双足跟红肿处为6X6厘米大小，皮肤光亮，触痛拒按，按之应指。白细胞计数24100/立方厘米。舌苔黄，舌质红，脉沉弦，此乃冻疮继发感染。证属寒湿凝滞，化热成毒。治拟清热解毒，托里透脓。药用：银花18克、公英18克、皂刺9克、白芷9克、桔梗9克、生黄芪18克、归尾9克、赤芍9克、牛膝9克、甘草3克、炒山甲9克。外用铁箍散软膏外敷。11月14日复诊：上方3剂后脓肿自溃，体温正常。乃以上方去银花、公英，加肉桂9克；局部清除腐肉，薄薄干撒甲字提毒粉，外贴阳和解凝膏。11月25日三诊：疮口已小，腐肉已清，新肌已生，改用益气养血之法。药用：生黄芪24克、党参24克、归尾9克、赤芍9克、云苓15克、白术12克、肉桂15克、牛膝9克、甘草9克。12月5日四诊：疮面为1.5X2厘米。改服阳和丸，每服2丸，人参养荣丸，每服2丸。12月15日停服阳和丸，改服肾气丸，12月30日疮面痊愈。
 
 按：患者原属寒湿凝滞，受冻成疮。但就诊时已染毒焮发，故先用清热解毒，托里透脓之法。脓溃后，遂加用肉桂温寒化滞。腐肉清除后再用益气养血之法促进新肌生长。应用肾气丸，是滋阴补肾之法，用以固先天，而防止来冬复发。这是医者的经验之处。（节选自《房芝萱医疗经验集》）
 
