update ok/gl/gl02-0.1.1.1.0.md. 第一行括号里心胞络应为心包络；小肠位于腹中，在五行亦属火，其经脉上络于心，与心互为表里。其主要功能是受盛化物，分泌清浊中的分泌清浊应为泌别清浊。

--- a/ok/gl/gl02-0.1.1.1.0.md
+++ b/ok/gl/gl02-0.1.1.1.0.md
@@ -1,4 +1,4 @@
-#### （一）心、小肠（附心胞络）
+#### （一）心、小肠（附心包络）
 
 1.心
 
@@ -38,7 +38,7 @@
 
 2.小肠
 
-小肠位于腹中，在五行亦属火，其经脉上络于心，与心互为表里。其主要功能是受盛化物，分泌清浊。
+小肠位于腹中，在五行亦属火，其经脉上络于心，与心互为表里。其主要功能是受盛化物，泌别清浊。
 
 《素问·灵兰秘典论》说：“小肠者，受盛之官，化物出焉”。所谓受盛，即受盛胃所腐熟的水谷；化物，即消化之意。胃所腐熟的水谷，经小肠进一步消化，以分成清、浊两部分，其清乃水谷之精微，其浊为消化后的糟粕及无用的水液。其水谷之精微由脾输转各部，其糟粕下传大肠，无用的水液渗入膀胱以为尿液。张介宾在《类经·脏象类》中说：“小肠居胃之下，受盛胃中水谷而分清浊，水液由此而渗入于前，糟粕由此而归于后，脾气化而上升，小肠化而下降，故曰化物出焉”。正是由于小肠的化物功能与尿液有关，故有“小肠主液”之说。临床上，如小肠泌别清浊失常而致的水泻证，常用“利小便即所以实大便”的方法治疗，就是依据这一原理。
 
