--- a/ok/gl/gl04-0.1.1.3.0.md
+++ b/ok/gl/gl04-0.1.1.3.0.md
@@ -6,7 +6,7 @@
 
 （1）暑为阳邪，其性炎热  暑是夏令自然界炎热之气，所以属于阳邪。感暑而病者，可出现高热、口渴、脉洪、汗多等症状。
 
-（2）暑性升散，易伤津耗气  暑为阳邪，有升散的性质，所以侵入则使腠理开而多汗。汗出过多则津伤，见口渴喜饮，心烦，小便短赤等症状。汗出太多，则气也随之而耗损，出现气短乏力。津气耗伤太过，甚至可以引起冷汗不止，喘息气微，脉微欲绝的虚脱证。
+（2）暑性升散，易伤津耗气  暑为阳邪，有升散的性质，所以侵人则使腠理开而多汗。汗出过多则津伤，见口渴喜饮，心烦，小便短赤等症状。汗出太多，则气也随之而耗损，出现气短乏力。津气耗伤太过，甚至可以引起冷汗不止，喘息气微，脉微欲绝的虚脱证。
 
 （3）暑多挟湿  暑季在气候炎热的同时，雨量也较多，所以在感受暑热的同时，常并感湿邪，因而有“暑多挟湿”的说法。暑邪挟湿，除暑的见症外，还可见四肢困倦，食欲不振，胸闷呕恶，大便溏泻，脉濡、苔膩等“湿"的症状。
 
