--- a/ok/bc/bc03-0.3.3.0.0.md
+++ b/ok/bc/bc03-0.3.3.0.0.md
@@ -1,8 +1,7 @@
 ### 干地黄
 
-**〔原文〕甘苦而寒，沉阴而降。入手足少阴**心、肾。**厥阴**心包肝。**及手太阳经**。小肠。**滋阴退阳，生血涼血。治血虚发热**，经曰：阴噓生内热。**劳伤咳嗽**，咳嗽阴虚者，地黄丸为要药，亦能除痰。丹溪曰：久病阴火上升，津液生痰不生血，宜补血以制相火，其痰自除。**痿痹惊悸**，有触而心动曰惊，无惊而自动曰悸，即怔仲也。有因心虚火动者，有因肝虚胆怯者，有因水停心下者，火畏水故悸也。地黄能交心肾而益肝胆，亦能行水，故治之。 **吐衄尿血**， 痛为淋血，不痛为尿血。由心肾气结，或忧思房劳所致，多属虚寒，不可专作热治。**血运崩中**，经曰：阴虚阳搏谓之崩，**足下热痛，折跌绝筋**。生地一斤，瓜姜糟一斤，生姜四两，炒熟，罨伤折处，冷则易之，又生地汁三升，酒升半，煮服，下扑损瘀血，**填骨髓，长肌肉，利大小便，调经安胎。又能杀虫，治心腹急痛**，
-《海上方》：捣汁和面作？饦食，能利出虫，忌用盐。《本草汇》曰：丹溪云气病补血，虽不中病，亦无害也。不知血药属阴，其性凝滞，若胃虚气弱之人，过服归、地等剂，反致痞闷，饮食减少，变证百出，至死不悟，岂不
-惜哉！大抵血虚，固不可专补其气； 而气虚亦不可徒补其血也。凡劳病，阳虚宜四君补气；阴虚宜四物补血；阴阳俱虚者，宜合用，名八珍汤。**江浙生者，南方阳气力微；北方生者，纯阴力大，以怀庆肥大菊花心**（1）**者良。酒制则上行外行**，**姜制则不泥膈。恶贝母，畏芜荑。忌莱菔、葱蒜、铜铁器。得酒、门冬、丹皮、当归良**。
+**〔原文〕甘苦而寒，沉阴而降。入手足少阴**心、肾。**厥阴**心包肝。**及手太阳经**。小肠。**滋阴退阳，生血涼血。治血虚发热**，经曰：阴虚生内热。**劳伤咳嗽**，咳嗽阴虚者，地黄丸为要药，亦能除痰。丹溪曰：久病阴火上升，津液生痰不生血，宜补血以制相火，其痰自除。**痿痹惊悸**，有触而心动曰惊，无惊而自动曰悸，即怔仲也。有因心虚火动者，有因肝虚胆怯者，有因水停心下者，火畏水故悸也。地黄能交心肾而益肝胆，亦能行水，故治之。 **吐衄尿血**， 痛为淋血，不痛为尿血。由心肾气结，或忧思房劳所致，多属虚寒，不可专作热治。**血运崩中**，经曰：阴虚阳搏谓之崩，**足下热痛，折跌绝筋**。生地一斤，瓜姜糟一斤，生姜四两，炒熟，罨伤折处，冷则易之。又生地汁三升，酒升半，煮服，下扑损瘀血，**填骨髓，长肌肉，利大小便，调经安胎。又能杀虫，治心腹急痛**，
+《海上方》：捣汁和面作饦食，能利出虫，忌用盐。《本草汇》曰：丹溪云气病补血，虽不中病，亦无害也。不知血药属阴，其性凝滞，若胃虚气弱之人，过服归、地等剂，反致痞闷，饮食减少，变证百出，至死不悟，岂不惜哉！大抵血虚，固不可专补其气； 而气虚亦不可徒补其血也。凡劳病，阳虚宜四君补气；阴虚宜四物补血；阴阳俱虚者，宜合用，名八珍汤。**江浙生者，南方阳气力微；北方生者，纯阴力大，以怀庆肥大菊花心**（1）**者良。酒制则上行外行**，**姜制则不泥膈。恶贝母，畏芜荑。忌莱菔、葱蒜、铜铁器。得酒、门冬、丹皮、当归良**。
 
 【讲解】（1）菊花心：地黄断面，射线在木质部中形成的裂隙，呈放射状，状如菊花，故名菊花心。
 
@@ -10,8 +9,8 @@
 
 《备要》云有酒制、姜制者，古时取地黄酒炒，旨在防苦寒伤阳碍胃；用姜制以防滞腻泥膈，现已少用。
 
-【临证应用】  干地黄治温热病，热入营血，发热口干，舌绛等证，常与犀角、玄参等配用，以增强清营养阴功效，如清营汤。对温热病后期，余热未清，阴津已伤，阴虚内热者尤为适宜，常与青蒿、知母、鳖甲等配伍，如青蒿整甲汤。治血热妄行的吐血、衄血等出血证，配侧柏叶、生艾叶、生荷叶同用，如四生丸。若血热毒盛，发斑发疹而色紫暗者，可与犀角、丹皮、赤芍等配伍，以凉血消斑，如犀角地黄汤。
+【临证应用】  干地黄治温热病，热入营血，发热口干，舌绛等证，常与犀角、玄参等配用，以增强清营养阴功效，如清营汤。对温热病后期，余热未清，阴津已伤，阴虚内热者尤为适宜，常与青蒿、知母、鳖甲等配伍，如青蒿鳖甲汤。治血热妄行的吐血、衄血等出血证，配侧柏叶、生艾叶、生荷叶同用，如四生丸。若血热毒盛，发斑发疹而色紫暗者，可与犀角、丹皮、赤芍等配伍，以凉血消斑，如犀角地黄汤。
 
-本品清热力较弱而长于养阴，配麦冬、玉竹可养胃阴以生津，如益胃汤；配山茱萸、山药、茯苓等可滋肝肾之阴，如六味地黄丸。配当归、黄芩、黄芪等，又常与葛根、花粉、五味子配伍用，如玉泉散。有时还与麦冬、元参配伍，如增液汤，以润肠通便，治肠燥便秘。
+本品清热力较弱而长于养阴，配麦冬、玉竹可养胃阴以生津，如益胃汤；配山茱萸、山药、茯苓等可滋肝肾之阴，如六味地黄丸。配当归、黄芩、黄芪等，养阴清热，如当归六黄汤。治消渴又常与葛根、花粉、五味子配伍用，如玉泉散。有时还与麦冬、元参配伍，如增液汤，以润肠通便，治肠燥便秘。
 
 【用量用法】10~30克，煎服。本品甘润性寒而滞，最易伤阳碍胃，故凡脾虚湿滞，食少腹满便溏者忌用。
