update ok/hk/hk1gl01-0.12.0.0.0.md. 标题字体缩小 《喉科紫珍集》，认为双者由于“鹜慌痰涎” 查过原书是为驚

--- a/ok/hk/hk1gl01-0.12.0.0.0.md
+++ b/ok/hk/hk1gl01-0.12.0.0.0.md
@@ -1,10 +1,10 @@
-## 风热乳蛾（急性扁桃体炎）
+## 风热乳蛾<small>（急性扁桃体炎）</small>
 
 自张子和提名乳蛾之后，此名一直沿用到今天。其所以称为乳蛾者，俱谓形似人乳与蚕蛾。其实，考乳者，幼小之谓。例如小虎称乳虎、小羊称乳羔、婴儿称乳子，植物中小黄瓜称乳瓜。蚕蛾之稚小者，理应称为乳蛾，因之乳蛾者，蚕蛹也。说明此病特征，在咽两旁有肿物如蚕蛹然。
 
 本症有急、慢之分，一般急性的基本上一如急性咽炎。不论病因、辨证、论治亦完全相同，唯一有异者，多此两侧肿物的峙立。
 
-历来把它分为单乳蛾与双乳蛾，事实上无此必要。还有如《喉科秘本》认为“单轻双重”，《喉证明辨》认为“双者轻、单者重”，《疡科选粹》又分为横蛾与竖蛾，《喉科紫珍集》，认为双者由于“鹜慌痰涎”，单者由于“劳郁风热”等等，均无甚临床意义。
+历来把它分为单乳蛾与双乳蛾，事实上无此必要。还有如《喉科秘本》认为“单轻双重”，《喉证明辨》认为“双者轻、单者重”，《疡科选粹》又分为横蛾与竖蛾，《喉科紫珍集》，认为双者由于“驚慌痰涎”，单者由于“劳郁风热”等等，均无甚临床意义。
 
 历代名称：本病最早的论著，首推《儒门事亲》。之后350年中，更有不少异名。至于《喉科泄秘》等书中的血蛾，实非扁桃体疾病，乃粘膜下出血的飞扬喉。
 
