--- a/ok/wk/wk15-0.3.0.0.0.md
+++ b/ok/wk/wk15-0.3.0.0.0.md
@@ -66,7 +66,7 @@
 
 三诊：6月3日。患肢肿胀渐退，足背坏死组织约2X2厘米，与健康组织已分离，脓水不多，肿痛已减，纳食尚可，二便尚调，再拟前法出入，以排余毒。外用红油膏、九一丹。患者于6月8日出院，当时仅见足背坏死创面。以外用祛腐生新药物为主，带回清解余毒之中药。
 
-按：毒蛇咬伤的处理，首先是早期结扎，并使患肢少动、是减少或阻止蛇毒吸收的一种方法。结扎后，应立即用井水或河水冲洗伤口，去除伤口周围毒液，条件许可时，最好用1‰高锰酸钾液，双氧水或盐水冲洗，然后进行扩创拔毒，挖除残留之毒牙，用拔火罐、吸吮器反复吸出毒液。伤口要湿敷，使毒液不断外溢。伤口周围可用新鲜蒲公英、野菊花等捣烂外敷，亦可用玉露散、金黄散水调成糊外敷。经以上处理后，立即选用解毒药。本案系重症，选用多种抢救措施，终于逆挽狂澜而获全效。（节选自《外科经验选》）
+按：毒蛇咬伤的处理，首先是早期结扎，并使患肢少动，是减少或阻止蛇毒吸收的一种方法。结扎后，应立即用井水或河水冲洗伤口，去除伤口周围毒液，条件许可时，最好用1‰高锰酸钾液，双氧水或盐水冲洗，然后进行扩创拔毒，挖除残留之毒牙，用拔火罐、吸吮器反复吸出毒液。伤口要湿敷，使毒液不断外溢。伤口周围可用新鲜蒲公英、野菊花等捣烂外敷，亦可用玉露散、金黄散水调成糊外敷。经以上处理后，立即选用解毒药。本案系重症，选用多种抢救措施，终于逆挽狂澜而获全效。（节选自《外科经验选》）
 
 〔简便验方〕
 
