--- a/ok/ya/ya01-0.26.0.0.0.md
+++ b/ok/ya/ya01-0.26.0.0.0.md
@@ -9,3 +9,9 @@
 ①顶礼：指佛教徒最尊敬的礼节。这里用来表示对秦鸣鹤的尊重与感谢。
 
 **〔评按〕**此案实录了秦氏治疗唐高宗风眩证的经过。其证情较重，眩晕而目不能视，头重闷而不堪忍受，属风毒上攻之实证，故取督脉之[百会](https://www.gmzyjc.com/read/zjs/zjs3.2.2-0.0.1.3.20.md)和[脑户](https://www.gmzyjc.com/read/zjs/zjs3.2.2-0.0.1.3.17.md)两穴刺血，其效迅捷。
+
+------
+
+电子版注：
+
+原著和电子版都是 邪 字，应该是原著有误。电子版已经改正。
