--- a/ok/fjx/fjx03-0.2.0.0.0.md
+++ b/ok/fjx/fjx03-0.2.0.0.0.md
@@ -2,19 +2,19 @@
 
 〔组成〕大黄去皮六两（18克） 芒硝一升（15克） 甘遂一钱匕（1克）
 
-〔煎服法〕上三味，以水六升，先煮大黄，取二升，去滓，内芒硝，煮一、二沸，内甘遂末，温服一升，得快利，止后服。（现代用法：水煎,溶芒硝，冲甘遂末服）。
+〔煎服法〕上三味，以水六升，先煮大黄，取二升，去滓，内芒硝，煮一、二沸，内甘遂末，温服一升，得快利，止后服。（现代用法：水煎，溶芒硝，冲甘遂末服）。
 
-〔讲解〕本方证为治疗水热结实之大结胸证。以心下硬满而痛，甚至剧痛不能触及,以及大便秘结，心烦口渴为其主证。本证病机为水饮与热邪互结于胸腹之间。根据《内经》“热者寒之”及《金匮》“诸有水者可下之”的治疗原则，水热结实，当以泻热逐水之法。故方中用甘遂苦寒，为峻下逐水药，尤善泻水逐饮，泄热散结，使结于胸中之水与热从大小便而去；大黄苦寒，长于荡涤邪热，共泻水热互结之邪，为君药。芒硝咸寒泻热软坚，助君药破除积结，推陈致新，为辅佐药。全方药虽三味，但量大、力专、效宏，为泻热逐水散结之峻剂。
+〔讲解〕本方证为治疗水热结实之大结胸证。以心下硬满而痛，甚至剧痛不能触及，以及大便秘结，心烦口渴为其主证。本证病机为水饮与热邪互结于胸腹之间。根据《内经》“热者寒之”及《金匮》“诸有水者可下之”的治疗原则，水热结实，当以泻热逐水之法。故方中用甘遂苦寒，为峻下逐水药，尤善泻水逐饮，泄热散结，使结于胸中之水与热从大小便而去；大黄苦寒，长于荡涤邪热，共泻水热互结之邪，为君药。芒硝咸寒泻热软坚，助君药破除积结，推陈致新，为辅佐药。全方药虽三味，但量大、力专、效宏，为泻热逐水散结之峻剂。
 
 本方为泻热逐水峻剂，所治证情急而重，在治疗上，要及时攻下，以防留邪为患，又要防止利下过度，而伤正气。如平素体质虚弱，或病后不任攻伐者，禁用此方。
 
-本方与大承气汤同属寒下竣剂，均用硝黄，但病因病位不洞，所以两方在配伍及用法上都有很大差异，临证必须注意。
+本方与大承气汤同属寒下竣剂，均用硝黄，但病因病位不同，所以两方在配伍及用法上都有很大差异，临证必须注意。
 
 〔临床应用〕本方多用于治结胸实热证，临床表现有胸协、少腹胀满硬痛拒按，手不可近，或下午三至四点钟有潮热，大便不通，舌苔黄滑厚腻，脉沉紧或弦紧滑数。
 
 若本方去甘遂，加杏仁、葶苈子名为大陷胸丸，具有泻热破结，下气逐饮之功效，主治结胸证，项亦强，如柔痉状。
 
-大、小陷胸汤均可治疗结胸证，但其病因、病位、病证尚有别，故临证必须明辨，区别运用。主治大结胸证（即结胸之重证），病因为水热互结于胸胁少腹，其病位从心下至少腹硬满痛，拒按，大便秘结，脉沉弦紧，舌苔黄腻，其病位范围较大。而小陷胸汤，主治小结胸证（即结胸之轻证),病因为痰热互结于胸脘，病位正在心下，邪结偏上，其病位范围小，证情较轻，胸脘部痞满，按之则痛，苔黄白而腻，脉浮弦滑。
+大、小陷胸汤均可治疗结胸证，但其病因、病位、病证尚有别，故临证必须明辨，区别运用。主治大结胸证（即结胸之重证），病因为水热互结于胸胁少腹，其病位从心下至少腹硬满痛，拒按，大便秘结，脉沉弦紧，舌苔黄腻，其病位范围较大。而小陷胸汤，主治小结胸证（即结胸之轻证)，病因为痰热互结于胸脘，病位正在心下，邪结偏上，其病位范围小，证情较轻，胸脘部痞满，按之则痛，苔黄白而腻，脉浮弦滑。
 
 本方与大承气汤比较，均具有峻下热结的作用，皆有便秘、潮热等症。然而，大陷胸汤，病位在中上二焦，症状以心下至少腹硬满而痛不可近为主，病性为水热互结之实热证。大承气汤，病位在中下二焦，症状可见脘腹胀满疼痛拒按为主，病性为实热与积滞内结于肠胃，气机阻滞。大陷胸汤作用在于泻热逐水，故用甘遂与大黄相伍，而且大黄要先煎而后纳诸药，取其“冶上者宜缓”之义。而大承气汤的作用，攻逐肠胃之燥实，故用大黄、芒硝与枳实、厚朴配伍，意在峻下热结，急下存阴，先煎枳朴，而后纳大黄，取其“治下者制宜急”之意。
 
@@ -24,18 +24,18 @@
 
 复习思考题
 
-1、大承气汤的配伍意义如何？
+1.大承气汤的配伍意义如何？
 
-2、你对大承气汤证的痞、满、燥、实是怎样理解的？
+2.你对大承气汤证的痞、满、燥、实是怎样理解的？
 
-3、为什么大承气汤能治热结旁流证？
+3.为什么大承气汤能治热结旁流证？
 
-4、简述大承气汤的煎煮法？
+4.简述大承气汤的煎煮法？
 
-5、大陷胸汤的组成与煎服方法有什么特点？
+5.大陷胸汤的组成与煎服方法有什么特点？
 
-6、大陷胸汤的应用指征是什么？
+6.大陷胸汤的应用指征是什么？
 
-7、大陷胸汤为什么能治疗胸证？
+7.大陷胸汤为什么能治疗结胸证？
 
-8、试比较大承气汤与大陷胸汤的不同点？
+8.试比较大承气汤与大陷胸汤的不同点？
