update ok/fjx/fjx10-0.1.0.0.0.md. 倒数第二行“【椎】有滞有湿有积者宜”改为“惟”。

--- a/ok/fjx/fjx10-0.1.0.0.0.md
+++ b/ok/fjx/fjx10-0.1.0.0.0.md
@@ -24,4 +24,4 @@
 
 本方加猪苓、泽泻、赤茯苓、白术、滑石、防风、山栀、木通、肉桂名为除湿胃苓汤，主治缠腰火丹，属湿热者。
 
-〔文献摘录〕张景岳：“夫所谓平胃者，欲平治其不平也。此东垣为胃强邪实者设，故其性味从辛从燥从苦，而能消能散，椎有滞有湿有积者宜之。今见方家每以此为常服健脾之剂，动辄用之，而不察可否，其误甚矣。”《景岳全书·卷十七》
+〔文献摘录〕张景岳：“夫所谓平胃者，欲平治其不平也。此东垣为胃强邪实者设，故其性味从辛从燥从苦，而能消能散，惟有滞有湿有积者宜之。今见方家每以此为常服健脾之剂，动辄用之，而不察可否，其误甚矣。”《景岳全书·卷十七》
