--- a/ok/gk/gk05-0.2.13.0.0.md
+++ b/ok/gk/gk05-0.2.13.0.0.md
@@ -6,7 +6,7 @@
 
 〔病因病机〕
 
-直接和间接暴力均可引起此类骨折。直接暴力如伤肢被重物打击前臂桡骨背侧或被卷入旋转的机器轮带中发生骨折，其残余暴力随桡骨沿下或直接压挤使三角软骨盘和下桡骨韧带损伤破裂，并发下桡尺关节脱位。儿童病例中，下桡尺关节常不发生脱位，但多合并尺骨下端骨骺分离。尺骨骨骺端仍保持其正常位置，尺骨下端骨骷随桡骨下端向背侧、近段移位。
+直接和间接暴力均可引起此类骨折。直接暴力如伤肢被重物打击前臂桡骨背侧或被卷入旋转的机器轮带中发生骨折，其残余暴力随桡骨沿下或直接压挤使三角软骨盘和下桡骨韧带损伤破裂，并发下桡尺关节脱位。儿童病例中，下桡尺关节常不发生脱位，但多合并尺骨下端骨骺分离。尺骨骨骺端仍保持其正常位置，尺骨下端骨骺随桡骨下端向背侧、近段移位。
 
 间接暴力所造成的骨折，和桡骨下端骨折（科累斯氏骨折）相似。如患者向前跌倒，前臂在旋前、旋后位或中立位，掌心触地所产生的对抗力所致。但在发生原理上和桡骨下端骨折有所不同，跌倒时，手掌着地，前臂纵轴离开躯干中线较远，和地面所成的角度呈45°以下，因而所造成的骨折平面较高，常发生在桡骨中、下段交界处骨折。骨折一般以横断为多，螺旋或斜行型较因骨远端被外力推向上方时，三角纤维软骨及尺侧韧带损伤或尺骨茎突骨折（撕裂性）而产生下桡尺关节脱位。如跌倒时，前臂在旋前位着地，一般桡骨骨折远端向背侧移位，前臂旋后位或中立位时，则桡骨远折段向掌侧移位，临床上以后者多见。
 
