--- a/ok/bc/bc02-0.3.2.0.0.md
+++ b/ok/bc/bc02-0.3.2.0.0.md
@@ -1,8 +1,6 @@
 ### 大戟
 
-〔原文〕**苦寒有毒。能泻脏腑水湿，行血发汗，利大小便。治十二种水(1)，腹满急痛，积聚癥瘕，颈腋痈肿，风毒脚肿。通经堕胎。误服损真气。**
-
-时珍曰：痰涎为物，随气升降，无处不到。入心则迷，成癫痫；入肺则塞窍，为咳喘背冷；入肝则胁痛干呕，寒热往来；入经络则麻痹疼痛；入筋骨则牵引隐痛；入皮肉则瘰疬痈肿。陈无择并以控涎丹主之，殊有奇效，此乃治痰之本。痰之本，水也，湿也。得气与火，则结为痰。刺律力痰。大戟能泄脏腑水湿。甘遂能行经络水湿，白芥子能散皮里膜外痰气，惟善用者能收奇功也。又曰：钱仲阳谓肾为真水，有补无泻。复云痘证变黑归肾者，用百祥膏下之，非泻肾也。泻其腑，则脏自不实，腑者，膀胱也。百祥为大戟一味，能行膀胱之水故也。窃谓非独泻腑，乃肾邪实而泻肝也。实则泻其子，大戟浸水青绿，肝胆之色也。痘证毒盛火炽，则水益涸，风挟火势，则土受亏，故津液内竭，不能化脓，而成黑陷之证。泻其风火之毒，所以救肾扶脾也。昂按：泻心乃所以补心，泻肾即所以救肾，邪热退，则真阴复矣。《机要》用大戟一两，枣三枚，同煮焙干，去戟，开枣丸服，名枣变百祥丸。**杭产紫者为上，北产白者伤上。浆水煮，去骨用。得大枣则不损脾。畏菖蒲，反甘草。**
+〔原文〕**苦寒有毒。能泻脏腑水湿，行血发汗，利大小便。治十二种水(1)，腹满急痛，积聚癥瘕，颈腋痈肿，风毒脚肿。通经堕胎。误服损真气。**<small>时珍曰：痰涎为物，随气升降，无处不到。入心则迷，成癫痫；入肺则塞窍，为咳喘背冷；入肝则胁痛干呕，寒热往来；入经络则麻痹疼痛；入筋骨则牵引隐痛；入皮肉则瘰疬痈肿。陈无择并以控涎丹主之，殊有奇效，此乃治痰之本。痰之本，水也，湿也。得气与火，则结为痰。刺律力痰。大戟能泄脏腑水湿。甘遂能行经络水湿，白芥子能散皮里膜外痰气，惟善用者能收奇功也。又曰：钱仲阳谓肾为真水，有补无泻。复云痘证变黑归肾者，用百祥膏下之，非泻肾也。泻其腑，则脏自不实，腑者，膀胱也。百祥为大戟一味，能行膀胱之水故也。窃谓非独泻腑，乃肾邪实而泻肝也。实则泻其子，大戟浸水青绿，肝胆之色也。痘证毒盛火炽，则水益涸，风挟火势，则土受亏，故津液内竭，不能化脓，而成黑陷之证。泻其风火之毒，所以救肾扶脾也。昂按：泻心乃所以补心，泻肾即所以救肾，邪热退，则真阴复矣。《机要》用大戟一两，枣三枚，同煮焙干，去戟，开枣丸服，名枣变百祥丸。</small>**杭产紫者为上，北产白者伤上。浆水煮，去骨用。得大枣则不损脾。畏菖蒲，反甘草。**
 
 【讲解】 (1)十二种水：是指十二脏腑之水，即多种水病。《金匮要略》分为风水、皮水、正水、石水、黄汗五水。又：五脏证候分“五水”，怛临床上一般分为“阴水”、“阳水”两大类。
 
