update ok/wk/wk06-1.3.0.0.0.md. 原文有“哺热、内热，阴血虚也”，应为“晡热、内热，阴血虚也”，电子版已改。

--- a/ok/wk/wk06-1.3.0.0.0.md
+++ b/ok/wk/wk06-1.3.0.0.0.md
@@ -190,6 +190,6 @@
 
 4.《卫济宝书》：”痈初起，突如蒸饼，又如鱼形。”（初期症状，似为体表浅部感染。）
 
-5.《外科精义•卷上》愚按：“若肿高焮痛者，先用仙方活命饮，后用托里消毒散。漫肿微痛者，宜托里散，如不应，加姜、桂。若脓出而反痛，气血虚也，八珍散。不作脓，不腐溃，阳气虚也，四君加归、芪、肉桂。不生肌、不收敛，脾气虚也，十全大补加姜、桂。哺热、内热，阴血虚也，四物加参、术。”
+5.《外科精义•卷上》愚按：“若肿高焮痛者，先用仙方活命饮，后用托里消毒散。漫肿微痛者，宜托里散，如不应，加姜、桂。若脓出而反痛，气血虚也，八珍散。不作脓，不腐溃，阳气虚也，四君加归、芪、肉桂。不生肌、不收敛，脾气虚也，十全大补加姜、桂。晡热、内热，阴血虚也，四物加参、术。”
 
 6.《外科理例•卷二》：“有因脓不得外泄以致疼痛，若用败毒寒药攻之，反致误事。若有脓急针之，脓出痛止。脓未成而热作痛，用解毒之药。”
