--- a/ok/gk/gk05-0.2.14.0.0.md
+++ b/ok/gk/gk05-0.2.14.0.0.md
@@ -8,7 +8,7 @@
 
 1.伸直型：桡骨下端伸直型骨折，又名科累斯氏骨折，多为间接暴力所致。当患者前臂在旋前、腕背伸位跌倒，手掌着地时，由于身体重力向下的力量与地面向上的反作用力，交集作用于桡骨远端，引起骨折。骨折后，桡骨下端关节面的倾斜度改变。偶见于直接暴力，如驾驶员在摇发动机之摇杆打击于桡骨远端引起骨折。暴力轻者，发生的骨折无明显移位，若暴力持续作用时，则腕关节的正常关系改变，骨折远端向背桡侧移位。近段向掌侧移位或上、下骨折端互相重叠，桡骨远段关节面正常解部发生改变。若并发尺骨茎突骨折，下桡尺关节之三角形纤维软骨盘随骨片分离移位，如骨片完整，移位明显时，三角韧带可能发生撕裂，掌、背侧屈、伸肌腱亦发生移位，肌腱滑动将发生障碍。
 
-2.屈曲型：桡骨下端屈曲型骨折，又名史密撕氏骨折。它和桡骨下端伸直型骨折相反，在临床比较少见。一般为间接暴力所造成。如跌倒时，前臂旋前腕关节掌屈，手背部触地，身体重力沿桡骨向下冲击，地面反作用力沿手背向上作用于桡骨下端，骨折线由背侧下方斜向掌背上方，远端骨折呈三角形，骨折块连带腕骨向掌桡侧移位。直接暴力造成的骨折，如在税骨远端的背侧被重物打击，撞碰或轧压等，也可音生此类骨折，其骨折特点与上述相同。
+2.屈曲型：桡骨下端屈曲型骨折，又名史密撕氏骨折。它和桡骨下端伸直型骨折相反，在临床比较少见。一般为间接暴力所造成。如跌倒时，前臂旋前腕关节掌屈，手背部触地，身体重力沿桡骨向下冲击，地面反作用力沿手背向上作用于桡骨下端，骨折线由背侧下方斜向掌背上方，远端骨折呈三角形，骨折块连带腕骨向掌桡侧移位。直接暴力造成的骨折，如在桡骨远端的背侧被重物打击，撞碰或轧压等，也可产生此类骨折，其骨折特点与上述相同。
 
 〔诊断〕
 
@@ -40,7 +40,7 @@
 
 每当骨折完全整复，腕部外形恢复正常后，均应辅用舒理伸、屈肌腱，避免骨折整复后筋仍出槽，达到筋骨并治的目的。
 
-2.固定：骨折整复后，外敷消肿骨膏，再用绷带包缠。先将横档表垫放于桡骨远段的背桡两侧，掌侧放方形平垫，（要求厚度稍大于横档表垫），然后安放桡骨下段小夹板固定，用三条布带捆扎。桡背侧夹板应超过桡腕关节，限制手腕的桡偏和背伸活动（图5—53）。屈曲型骨折，在掌、背侧各置平纸方垫一个，掌侧平垫在前，压远端向背侧：背侧平垫在后压近端向掌。掌侧夹板下端越过腕关节以下2〜3厘米，防止掌屈。背侧板下端平桡骨茎突以下使腕关节能背伸20〜30°活动。夹板与伸直型相同，肘屈90°胸前三角巾前臂中立位固定。
+2.固定：骨折整复后，外敷消肿驳骨膏，再用绷带包缠。先将横档表垫放于桡骨远段的背桡两侧，掌侧放方形平垫，（要求厚度稍大于横档表垫），然后安放桡骨下段小夹板固定，用三条布带捆扎。桡背侧夹板应超过桡腕关节，限制手腕的桡偏和背伸活动（图5—53）。屈曲型骨折，在掌、背侧各置平纸方垫一个，掌侧平垫在前，压远端向背侧：背侧平垫在后压近端向掌。掌侧夹板下端越过腕关节以下2〜3厘米，防止掌屈。背侧板下端平桡骨茎突以下使腕关节能背伸20〜30°活动。夹板与伸直型相同，肘屈90°胸前三角巾前臂中立位固定。
 
 <img src="img\5-53.jpg" style="zoom:70%;" />
 
