update ok/gl/gl06-0.6.0.0.0.md. 1.手太阴（肺） - 湿热邪气 - 症状：‘头重头帋蒙’，当为 ‘头重头昏蒙’，据原书改之。 2.手少阳（大肠） - 温热邪气 - 病机：‘高热大汗上津’，当为 ‘高热大汗伤津’，据原书改之。
原书251页，中焦 ：‘手少阳(大肠)’，应为 ‘ 手阳明(大肠)’，按规则记而不改。
原书251页，下焦 - 足厥阴（肝）- 症状：‘又见手足濡动’，“濡”当为“蠕”之讹，当为‘又见手足蠕动’，按规则记而不改。

--- a/ok/gl/gl06-0.6.0.0.0.md
+++ b/ok/gl/gl06-0.6.0.0.0.md
@@ -14,11 +14,11 @@
 | ---- | -------------- | -------- | ------------------------------------------------------------ | ------------------------------------------------------------ | ------------------------ | -------------- |
 | 上焦 | 手太阴（肺）   | 温热邪气 | 温热邪气袭表，卫外失司，肺失宣降                             | 发热微恶风寒，无汗或少汗，头痛，咽红或痛，咳嗽，口微渴       | 舌边尖红，苔薄白         | 浮数           |
 | 上焦 | 手太阴（肺）   | 温热邪气 | 温热邪气入气分，肺热壅盛                                     | 身热汗出，咳嗽喘息，口渴                                     | 苔黄                     | 数             |
-| 上焦 | 手太阴（肺）   | 湿热邪气 | 湿热邪气困阻肌表，肺失宣降，卫外失司，湿热弥漫于里，气机阻滞，卫气同病 | 恶寒发热，头重头帋蒙，周身重痛，口淡不渴，胸脘痞闷           | 苔白腻                   | 濡             |
+| 上焦 | 手太阴（肺）   | 湿热邪气 | 湿热邪气困阻肌表，肺失宣降，卫外失司，湿热弥漫于里，气机阻滞，卫气同病 | 恶寒发热，头重头昏蒙，周身重痛，口淡不渴，胸脘痞闷           | 苔白腻                   | 濡             |
 | 上焦 | 手厥阴（心包） | 温热邪气 | 温热邪气灼液成痰，痰热蒙蔽心包                               | 身热灼手，神昏谵语或昏愦不语，舌蹇，四肢厥逆                 | 舌体短缩，质红绛，苔黄燥 | 细滑数         |
 | 上焦 | 手厥阴（心包） | 湿热邪气 | 湿热郁蒸，酿生痰浊，湿痰蒙蔽心包                             | 身热不扬，神识呆痴，时昏时醒，昏则谵语，醒则神呆，呼之能应   | 白腻或黄腻               | 濡滑或濡滑数   |
 | 中焦 | 足阳明（胃）   | 温热邪气 | 温热邪气入里，阳明胃热炽盛，里热蒸腾                         | 高热恶热，大汗出，口渴饮冷，面赤心烦                         | 舌红黄燥                 | 洪大而数       |
-| 中焦 | 手少阳（大肠)  | 温热邪气 | 高热大汗上津，胃肠燥热与糟粕炼结成实，燥屎内结，阻滞气机，腑气不通 | 身热，日晡潮热，汗出，大便秘结不下，腹胀痛拒按，烦躁谵语     | 舌红苔黄燥，甚焦燥起芒刺 | 沉实有力       |
+| 中焦 | 手少阳（大肠)  | 温热邪气 | 高热大汗伤津，胃肠燥热与糟粕炼结成实，燥屎内结，阻滞气机，腑气不通 | 身热，日晡潮热，汗出，大便秘结不下，腹胀痛拒按，烦躁谵语     | 舌红苔黄燥，甚焦燥起芒刺 | 沉实有力       |
 | 中焦 | 足太阴（脾)    | 湿热邪气 | 湿热困脾，气机阻滞，升降失司                                 | 身热不扬，脘腹胀满，纳呆呕恶，大便溏滞，身重肢倦             | 苔白腻                   | 濡             |
 | 下焦 | 足少阴（肾)    | 温热邪气 | 温热邪气久留不解，深入下焦，消灼真阴，肾阴耗损               | 低热,手足心热甚于手足背，口燥咽干，神倦耳聋                  | 舌绛少苔                 | 虚大或迟缓结化 |
 | 下焦 | 足厥阴（肝)    | 温热邪气 | 温热邪气消灼真阴肝血肾精枯涸，水不涵木，筋脉失养，虚风内动   | 除上述肾阴耗损见症外，又见手足濡动，甚或瘈疭，心中憺憺大动，甚则心中痛，神昏肢厥 | 舌绛少苔光绛无苔         | 细促或微细欲绝 |
