--- a/ok/bc/bc02-0.3.3.0.0.md
+++ b/ok/bc/bc02-0.3.3.0.0.md
@@ -1,6 +1,6 @@
 ### 芫花
 
-〔原文〕**苦寒有毒，去水饮痰癖**(1)**，疗五水**(2)**在五脏，皮肤胀满，喘急，痛引胸胁，咳嗽瘴疟。**五水者，风水、皮水、正水、石水、黄汗也。水积胸中，坚满如石，名石水；汗如柏汁，名黄汗。久不愈，必致痈脓。时珍曰：仲景治伤寒太阳证，表未解，心下有水而咳，干呕发热，或喘或利者，小青龙汤主之；表已解，有时头痛，汗出恶寒，心下有水，干呕，痛引两胁，或喘或嗽者，十枣汤主之。盖青龙散表邪，使水从汗出，《内经》所谓开鬼门也；十枣逐里邪，使水从二便出，《内经》所谓洁净府，去陈莝法也。十枣汤：芫花、甘遂、大戟等分，枣十枚。**叶似柳，二月开花紫碧色，叶生花落。陈久者良。醋煮过，水浸曝用。根疗疥，可毒鱼。反甘草。**斗讼者，取叶擦皮肤，辄作赤肿，假伤以诬人。
+〔原文〕**苦寒有毒，去水饮痰癖**(1)**，疗五水**(2)**在五脏，皮肤胀满，喘急，痛引胸胁，咳嗽瘴疟。**<small>五水者，风水、皮水、正水、石水、黄汗也。水积胸中，坚满如石，名石水；汗如柏汁，名黄汗。久不愈，必致痈脓。时珍曰：仲景治伤寒太阳证，表未解，心下有水而咳，干呕发热，或喘或利者，小青龙汤主之；表已解，有时头痛，汗出恶寒，心下有水，干呕，痛引两胁，或喘或嗽者，十枣汤主之。盖青龙散表邪，使水从汗出，《内经》所谓开鬼门也；十枣逐里邪，使水从二便出，《内经》所谓洁净府，去陈莝法也。十枣汤：芫花、甘遂、大戟等分，枣十枚。</small>**叶似柳，二月开花紫碧色，叶生花落。陈久者良。醋煮过，水浸曝用。根疗疥，可毒鱼。反甘草。**<small>斗讼者，取叶擦皮肤，辄作赤肿，假伤以诬人。</small>
 
 【讲解】 (1)痰癖：病名。指水饮久停为痰，流移胁肋之间，以致时有胁痛的病证。(2)五水：一般为皮水、风水、正水、石水、黄汗。这里指的是按五脏证候而分的心水、肝水、肺水、脾水、肾水。
 
