update ok/gl/gl08-0.3.0.0.0.md. 将“一、火制法”中“是常用的有煅、炮、”的“是”删除，扫描版本中没有“是”

--- a/ok/gl/gl08-0.3.0.0.0.md
+++ b/ok/gl/gl08-0.3.0.0.0.md
@@ -6,7 +6,7 @@
 
 ### 一、火制法
 
-火制法，是指把药物直接或间接放在火上，使其干燥、松脆、焦黄或成炭状，是常用的有煅、炮、煨、炒、炙、焙、烘等方法。
+火制法，是指把药物直接或间接放在火上，使其干燥、松脆、焦黄或成炭状，常用的有煅、炮、煨、炒、炙、焙、烘等方法。
 
 #### 1、煅
 
